--- a/pytorch/ch2/机器学习.md
+++ b/pytorch/ch2/机器学习.md
@@ -42,6 +42,90 @@ PCA的流程，PCA第一步为什么要中心化、
 
 
 
+
+
+
+
+
+1、AUC值，PR曲线，ROC曲线
+
+2、交叉熵和最大似然估计的关系推导
+
+3、Kmeans原理和实现
+
+4、GDBT、Xgboost、Lightgbm原理和区别
+
+5、Dropout在训练和测试时的区别
+
+6、随机森林，随机性体现在哪里
+
+7、Transformer的实现细节
+
+8、CRF和HMM
+
+9、Word2vec Hierarchical Softmax原理
+
+10、BERT模型架构，怎么预训练，怎么feature based/fine-tune
+
+11、逻辑回归原理公式和损失函数，以及LR推导
+
+12、LSTM和GRU门机制
+
+13、GBDT原理。追问：负梯度的概念是什么，为什么用负梯度
+
+14、GBDT 叶节点权重怎么算
+
+15、GBDT 单调性约束怎么实现的
+
+16、能否用LR 或者 SVM 做GBDT基模型
+
+17、RF 原理讲一下，为什么能防止过拟合
+
+18、机器学习如何调参
+
+19、Dropout实现上的细节, 代码实现
+
+20、BN细节，Dropout和BN之间的区别
+
+21、Bert最新的发展，都是为了解决什么问题
+
+22、Attention原理以及实现Attention
+
+23、cnn模型并行和数据并行有什么区别
+
+24、softmax公式及求导
+
+25、交叉熵，相对熵，为什么损失函数用交叉熵
+
+26、10亿个数，内存只有1M，如何让这10亿个数有序
+
+27、模型训练为什么要引入偏差和方差
+
+28、如何解决过拟合的问题
+
+29、朴素贝叶斯为什么朴素naïve
+
+30、One-hot的作用为什么不直接用数字表示
+
+31、LR明明是分类模型为什么叫回归
+
+32、梯度下降如何并行化
+
+33、LR中L1/L2正则项是啥，哪个好，为什么L1正则稀疏性
+
+34、写出全概率公式&贝叶斯公司并对比
+
+35、SVM推导以及如何解决多分类问题
+
+36、分层分类在实际问题中如何解决
+
+37、决策树和随机森林的区别是什么
+
+38、Kmeans初始点除了随机选择之外的方法
+
+
+### 整理完看牛客网的收藏  
+
 ### 一般小问题  
 
 1、写出 LR 和 SVM 损失函数  
@@ -60,7 +144,7 @@ PCA的流程，PCA第一步为什么要中心化、
 权重衰减通过惩罚绝对值较大的参数，为需要学习的模型增加了限制（可以看自己的笔记 d2l 66 页）  
 
 #### 了解什么评估指标
-交叉验证是模型评估方法、recall、precision、F1、AUC、介绍一下 ROC 曲线（西瓜书）、  
+交叉验证是模型评估方法、recall、precision、F1、AUC、介绍一下 ROC 曲线（西瓜书）、P、R和AP有什么关系？、  
 
 #### DBSCAN
 传染病一样，在范围内，发展下线 要指定半径、  
