--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -13,6 +13,12 @@
 
 1、计时超过五百次，完成了 500 次小任务  
 2、计时超过五百五十次，完成了 550 次小任务  
+3、讲完《知青岁月》  
+4、讲完《在正定》  
+5、讲完《在厦门》 
+6、读完一次面试题，20 篇  
+7、
+
 
 一天只做 3 件事：项目、抄公式、习主席  
 
