--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -17,7 +17,8 @@
 4、讲完《在正定》  
 5、讲完《在厦门》 
 6、读完一次面试题，20 篇  
-7、
+7、完成抄公式  
+8、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
@@ -25,7 +26,7 @@
 
 ### 失败清单，这个是提炼的精华，是金子
 1、吃饭没有看学习视频；如果不想看视频，就什么都不看   2 次 10 小时  
-2、失败的一个极为重要的原因，多次魔道，要使用库兹涅佐夫方法  
+2、不要碰微博，不管有多大的新闻  
 3、  
 
 
