--- a/pytorch/ch3/已完成.md
+++ b/pytorch/ch3/已完成.md
@@ -22,15 +22,13 @@
 
 
 
+### 已完成。善始善终永不放弃，这个才是贯穿始终反复使用的。
+1、
+2、
 
-### 当前目标
-项目每天 6 个  
-论文 3 篇  
-李航一章  
-nndl  
-C++  
-收拾房间  
-d2l 一章，视频  
+
+
+
 
 <br>
 
