--- a/pytorch/ch2/机器学习.md
+++ b/pytorch/ch2/机器学习.md
@@ -10,7 +10,8 @@
 ④、手写xgboost的目标函数，xgboost和GBDT的区别，xgboost构建树时候节点分裂的公式是什么？ xgboost如何调参,xgboost可以自定义损失函数吗？给定一个场景如何自定义损失函数？如果样本的权重不一样如何自定义损失函数？sklearn的xgboost支持哪些损失函数？分类和回归算法都有哪些损失函数？模型融合如何做的？bagging，boosting和stacking的原理以及他们的区别是是什么；
 
 #### 2、LR 是问的最多的
-损失函数，为什么不用最小二乘  
+
+为什么不用最小二乘  
 
 
 #### 3、gbdt
@@ -66,8 +67,6 @@ PCA的流程，PCA第一步为什么要中心化、
 9、Word2vec Hierarchical Softmax原理
 
 10、BERT模型架构，怎么预训练，怎么feature based/fine-tune
-
-11、逻辑回归原理公式和损失函数，以及LR推导
 
 12、LSTM和GRU门机制
 
@@ -128,7 +127,7 @@ PCA的流程，PCA第一步为什么要中心化、
 
 ### 一般小问题  
 
-1、写出 LR 和 SVM 损失函数  
+1、SVM 损失函数  
 2、为什么AUC面积大证明性能强  
 3、
 4、
@@ -136,6 +135,9 @@ PCA的流程，PCA第一步为什么要中心化、
 
 
 ### 已经解决的问题
+
+#### LR 
+LR 公式抄了 6 遍了、LR 损失函数就是 L(w)  
 
 #### 解决过拟合的方法
 增加数据、正则化、Dropout、early stopping、batch norm、  
