--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -18,10 +18,19 @@
 5、讲完《在厦门》 
 6、读完一次面试题，20 篇  
 7、完成抄公式  
-8、
+8、完成抄公式  
+9、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
+
+
+### 用 5 分钟法锻炼善始善终永不放弃，这个才是贯穿始终反复使用的。
+1、每天使用 5 分钟法  
+2、讲完习主席 5 本书  
+3、C++  
+3、
+
 
 
 ### 失败清单，这个是提炼的精华，是金子
@@ -205,7 +214,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 <br>
 
-### 学不动，想看电视：学不下去抄公式，Ian 笔记、d2l pysnooper、洗衣服、打扫卫生、运动、睡觉 
+### 学不下去再学一会儿就好了，10.09 看不下去了，又看了 5 分钟，就非常愉快了
 
 
 <br>
