--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -3,11 +3,53 @@
 
 漏了一个，啤酒厂，开源，水涨船高，非常支持。其他人觉得花钱太多。后来交税  
 
+1988 年 6 月至 1990 年 4 月任宁德地委书记，现在已经基本上已经没有地委了，级别应该是和市委书记一样。 
+
+宁德当时非常贫穷，是全国 18 个集中连片贫困地区之一，经济总量排全省最后，俗称“闽东老九”。  
+
 一个是宁德倒数第一，没有了积极性，每次坐最后一排，习主席年轻，有为，想去带一带  
 
-弱鸟先飞，滴水石穿，自己见证过这个自然奇迹。(查原话)  
+调查实际：P3 跑遍了 9 个县，不要小瞧调查实际这一条，是极为重要的。信息论  
 
-不要小瞧调查实际这一条，是极为重要的。信息论
+P16 天气很热，桑拿天，一个多月翻山越岭，很不容易。
+
+P17 吃糯米榯，手抓，怕不卫生，准备筷子，说不行。
+
+P32 看了，说不是不努力，是客观条件确实不好。听了都眼含热泪，都是说他们思想保守，干劲儿不足。  
+
+
+P3 听汇报，不要念稿子，是考察干部的好办法  
+
+P4 每到一个地方都要读县志，光靠跑了解是不够的  
+
+
+
+定战略：弱鸟先飞，滴水石穿，自己见证过这个自然奇迹。(查原话)  
+
+
+具体做法：P67 打基础、建地基、立支柱、重软件  
+
+P90 茶叶  
+
+体高附加值：P91 不要只是生产简单的。  
+
+
+从严治吏，反腐：
+
+P30 党建是关系到我们事业成败的关键。  
+
+P34 腐败没有刹住，其他任何事情都做不成。  
+
+P35 阻力非常大，涉及到的人非常多  
+
+
+读书：经常手不释卷，利用一切时间读书  
+
+
+保护环境：P71 发展林业的好处；他在讲话中说过，环境问题不但是一个生态问题，还是一个重要的政治问题，比如前些年雾霾很严重的时候，社会上有很大的不满的声音，不利于社会稳定。  
+
+P89 现在森林覆盖率达到 67%，是当年的硕果。高瞻远瞩。  
+
 
 
 
