--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -19,7 +19,11 @@
 6、读完一次面试题，20 篇  
 7、完成抄公式  
 8、完成抄公式  
-9、
+9、看完项目视频  
+10、计时超过六百次，完成了 600 次小任务  
+11、整理目录  
+12、
+
 
 
 一天只做 3 件事：项目、抄公式、习主席  
@@ -30,6 +34,29 @@
 2、讲完习主席 5 本书  
 3、C++  
 3、
+
+
+#### 在流程中设置加入防遗忘机制，永远不会忘记，应该用这个方法来实现持之以恒，坚持不懈 
+
+在每天必做的事情上面加入要做的事情。
+
+每天必做的事情：
+拿手机：可以把手机放在要读的书里  
+用微信：写待办事项，永远不会忘  
+出门：门口放哑铃，不用哑铃出不了门  
+做饭：
+吃饭：
+刷牙：在牙杯或牙膏上放什么东西  
+上厕所：
+
+
+
+1、用钥匙锁门，就永远不会忘带钥匙。因为没带钥匙就锁不了门，加到前面，成为一个必须的环节，没有就无法进行  
+2、打火机放在蚊香上面  
+3、口罩挂在钥匙钩子上  
+4、哑铃放在门口，不拿哑铃出不了门  
+5、微信不发送，就永远不会忘了待办事项，比用纸写好一万倍，用纸写写几天就忘了，有时候还找不到，这个永远忘不了
+
 
 
 
