--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -1,13 +1,14 @@
 
 每天起床第一件事就是公式，用抄公式学会机器学习    
-10.07：
 
+
+LR 公式抄了 8 遍了  
 
 成不了最聪明的人，但是可以成为抄公式最多的人。  
 
 抄公式，付出极少，收获极大，极为有效  
 
-这个是关键所在，总是记不住，抄个百八十遍肯定就记住了  
+这个是关键所在，总是记不住，抄个百八十遍肯定就记住了。赫布理论、听歌、卖油翁  
 
 抄很多遍，抄 100 遍还还记不住？再记不住就抄 1000 遍  
 
