--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -22,7 +22,10 @@
 9、看完项目视频  
 10、计时超过六百次，完成了 600 次小任务  
 11、整理目录  
-12、
+12、彻底弄懂了 Precision 和 Recall  
+13、代码上传完成  
+14、README 整理完毕  
+15、
 
 
 
@@ -33,21 +36,23 @@
 1、每天使用 5 分钟法  
 2、讲完习主席 5 本书  
 3、C++  
-3、
+4、锻炼身体  
+5、
 
 
 #### 在流程中设置加入防遗忘机制，永远不会忘记，应该用这个方法来实现持之以恒，坚持不懈 
 
 在每天必做的事情上面加入要做的事情。
 
-每天必做的事情：
+每天必做的事情：  
 拿手机：可以把手机放在要读的书里  
+用电脑：可以在键盘上放置什么东西，不做成就不能用电脑  
 用微信：写待办事项，永远不会忘  
 出门：门口放哑铃，不用哑铃出不了门  
-做饭：
-吃饭：
+做饭：  
+吃饭：  
 刷牙：在牙杯或牙膏上放什么东西  
-上厕所：
+上厕所：  
 
 
 
@@ -70,18 +75,11 @@
 ### 失败记录
 10.01：
 
-
-一定要解决学不动干什么的问题，每次都是因为这个问题，可能只有工作这个办法才能解决，业余时间做的事情都是零散的事，没有这个问题  
-
-办法就是合理穿插，换换思路。总结习主席清单    
-
-运动最有效  
-
 这种方法的核心是可以消除主观疲劳，就是只完成当前的 5 分钟任务就行，不用管还剩下多少。如果觉得有压力了，焦虑了，抵触了肯定是忘了这一点了，忘了这一点就要出问题。  
 
 生活也应该是这样，做好当下的事情，不要想太多以后的事情  
 
-如果只是作为启动方法就总会忘了这一点，就会出问题，还是要当做贯穿始终的方法，麻烦就麻烦一点吧。  
+如果只是作为启动方法就总会忘了这一点，就会出问题，还是要当做贯穿始终的方法。  
 
 pysnooper 重要极为的意义是这是个可以反复使用的工具，不是一个程序，而是所有程序，一天用 20 次，一年就是 7000 次，三年就是 2 万次，效果相差百万倍。这就是方法和工具的威力，学会一个解决一类问题，改进一点改进几十万件事  
 
