--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -25,7 +25,9 @@
 12、彻底弄懂了 Precision 和 Recall  
 13、代码上传完成  
 14、README 整理完毕  
-15、
+15、完成 pysnooper Batch Normalization  
+16、抄公众号 SVM 公式  
+17、
 
 
 
