--- a/pytorch/ch2/面试.md
+++ b/pytorch/ch2/面试.md
@@ -20,15 +20,14 @@
 
 讲项目，可能会问的很细，写的要掌握好 **看表格和图像，把代码和结果一一对应，看代码实现了什么功能**   
 
-自我介绍  
+自我介绍：毕业学校，专业，工作经历，为什么转业学习人工智能？  
 
-自己的优缺点：优点：终身学习，查理芒格。  
+自己的缺点：很笨，学很多遍也记不住。优点：勤奋，会多付出，直到学会为止。终身学习，每天进步。
+查理芒格：我不断地看到有些人在生活中越过越好。他们不是最聪明的，甚至不是最勤奋的，但他们是学习机器。他们每天夜里睡觉时都比那天早晨聪明一点点。孩子们，这种习惯对你们很有帮助，特别是在你们还有很长的路要走的时候。。  
 
-做过的最有成就感的事：这个为主，学会了机器学习和深度学习。读书，读完史诗 5 本、《资治通鉴》、《穷查理宝典》 、
+做过的最有成就感的事：这个为主，学会了机器学习和深度学习。读了 300 本书，读完史诗 5 本、《资治通鉴》、《穷查理宝典》 、
 
-遇到的最大的困难是什么，怎么解决的：学习机器学习和深度学习，零基础，没人教，学数学、学编程、学算法，看视频，看书，背单词  
+遇到的最大的困难是什么，怎么解决的：学习机器学习和深度学习，零基础，没人教，学数学(高中数学、高数、线代、概率论、可汗学院、宋浩老师)、学英语(百词斩，10 个月)、学编程(零基础 hello world 都不会。Python、MySQL、HTML、Django、Linux、numpy、pandas、C++、docker、git(不会用GitHub)、阿里云服务器(不会用服务器)、sklearn、TensorFlow、pytorch、Keras)、学算法(机器学习，深度学习)，看视频，看书  
 
 人生规划：先老老实实学技术，打好根基，想几年以后带团队做出实际的产品。  
-
-LeetCode 热门问题：https://www.nowcoder.com/ta/job-code-high  
 
