--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -1,8 +1,13 @@
 
+### 等同视之，就是都不重要，要抓住主要矛盾，要使用注意力机制。李航这本书抄了 9 遍，半年时间，用了十几支笔，结果还是一头雾水。现在找了最重要的 20 个公式，几天就完全掌握了，效率差 1000 倍，效果更好。
+
 每天起床第一件事就是公式，用抄公式学会机器学习    
 
+一般不超过 10 遍，面试之前再抄一遍：  
+LR 公式抄了 12 遍了；暂封，都看完再回看  
+SVM 第 3 遍；5 遍以后改 周志华只抄重要公式，5 遍再改李航，最后整合  
+xgboost 视频，公式
 
-LR 公式抄了 8 遍了  
 
 成不了最聪明的人，但是可以成为抄公式最多的人。  
 
