--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -4,9 +4,11 @@
 每天起床第一件事就是公式，用抄公式学会机器学习    
 
 一般不超过 10 遍，面试之前再抄一遍：  
-LR 公式抄了 12 遍了；暂封，都看完再回看  
-SVM 第 3 遍；5 遍以后改 周志华只抄重要公式，5 遍再改李航，最后整合  
-xgboost 视频，公式
+LR 公式 13 遍；暂封，都看完再回看  
+SVM 第 5 遍；10 遍以后读周志华、李航，最后整合  
+xgboost 视频《Python 数据分析与机器学习实战》 200、201、204 看完第 2 遍，公式 2 遍  
+GBDT 公式 1 遍  
+
 
 
 成不了最聪明的人，但是可以成为抄公式最多的人。  
@@ -42,5 +44,10 @@ P83 基尼指数 (5.22)(5.24)(5.25)
 
 P90 LR 公式  
 
+P156 算法 8.1 (Adaboost)  
+P158 例 8.1 Adaboost 例题(读)  
+P166 提升树  
+P168 例 8.2  
+P171 算法 8.4 (GBDT)  
 
 要抄写的内容：面试常问的问题、李航统计学习方法、周志华机器学习、论文、  
