--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -4,10 +4,12 @@
 每天起床第一件事就是公式，用抄公式学会机器学习    
 
 一般不超过 10 遍，面试之前再抄一遍：  
-LR 公式 13 遍；暂封，都看完再回看  
-SVM 第 5 遍；10 遍以后读周志华、李航，最后整合  
-xgboost 视频《Python 数据分析与机器学习实战》 200、201、204 看完第 2 遍，公式 2 遍  
-GBDT 公式 1 遍  
+一天主要学一个就好了，时间够  
+SVM 第 7 遍；10 遍以后读周志华、李航，最后整合  
+GBDT 读公式 3 遍  
+xgboost 公式 3 遍  
+LSTM 公式 1 遍，读图画图 1 遍   
+梯度消失梯度爆炸公式  
 
 
 
@@ -51,3 +53,13 @@ P168 例 8.2
 P171 算法 8.4 (GBDT)  
 
 要抄写的内容：面试常问的问题、李航统计学习方法、周志华机器学习、论文、  
+
+
+已完成公式，所有的都过完一遍之后，再精通。面试之前再抄一遍  
+
+LR 公式 13 遍  
+
+xgboost 视频《Python 数据分析与机器学习实战》 200、201、204 看完第 2 遍  
+
+
+
