--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -10,7 +10,7 @@ GBDT 读公式 3 遍
 xgboost 公式 3 遍  
 LSTM 公式 1 遍，读图画图 1 遍   
 梯度消失梯度爆炸公式  
-
+Kmeans 公式  
 
 
 成不了最聪明的人，但是可以成为抄公式最多的人。  
@@ -51,6 +51,10 @@ P158 例 8.1 Adaboost 例题(读)
 P166 提升树  
 P168 例 8.2  
 P171 算法 8.4 (GBDT)  
+
+P264 Kmeans 公式  
+P265 算法 14.2 (Kmeans)  
+
 
 要抄写的内容：面试常问的问题、李航统计学习方法、周志华机器学习、论文、  
 
