--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -1,17 +1,42 @@
 
+### 小米手机，倒计时一小时，点到即止  
+
+收获，应该给自己个人定一个 30 年规划，肯定不准，但是应该有一个大的方向，指导行动。原来看不到这么远  
+
+我开始是用手机的倒计时，用了一段时间，感觉很难用，后来下载了几个 APP，最后定下来用这可番茄时钟。现在已经 800 次了，完成了 800 个小任务  
+
+每一小任务，就是一幅画的一个小格子，能完成一个，就能完成所有。  
+
 《在宁德》
+漏了很多好东西；很粗糙；
 
 漏了一个，啤酒厂，开源，水涨船高，非常支持。其他人觉得花钱太多。后来交税  
 
+P142 在宁德的时候，有一个管财政的人去找习主席谈话，习主席给他讲过，要有大财政观念，不能把增加财政收入理解为多收税，只有企业发展了，财政收入才有了源源不断的活水，水涨船高，泉大水足就是这个道理，所以要先予后取，培植财源，不要做竭泽而渔的蠢事。  
+
+P226 救活了马尾船厂，马尾船厂是洋务运动时期，左宗棠在 1866 年创办的一家船厂，这个人是船厂总经理，他接手的时候船厂已经步履维艰了，习主席去调研，他们说了自己的困难，习主席表示会支持船厂发展，而且提出让他们搞债转股，要开辟多元化融资渠道。后来在习主席的主导下，每年给船厂拨款 2000 万。  
+
 1988 年 6 月至 1990 年 4 月任宁德地委书记，现在已经基本上已经没有地委了，级别应该是和市委书记一样。 
 
-宁德当时非常贫穷，是全国 18 个集中连片贫困地区之一，经济总量排全省最后，俗称“闽东老九”。  
+宁德当时非常贫穷，山多地少，山上也不长树，没有矿产，缺水缺电，灾害频繁，是全国 18 个集中连片贫困地区之一，经济总量排全省最后，俗称“闽东老九”。  
 
 一个是宁德倒数第一，没有了积极性，每次坐最后一排，习主席年轻，有为，想去带一带  
 
-调查实际：P3 跑遍了 9 个县，不要小瞧调查实际这一条，是极为重要的。信息论  
+P138 刚到等他讲话，都习惯了新官上任三把火，本以为会有很多高谈阔论，结果说的很简单，也没有豪言壮语，很快就结束了，大家都有些意外。
+
+P105 本来是为他在宾馆腾出了套间，还有专门的人照顾生活起居，配了一辆进口小汽车，他都谢绝了，他说住在机关宿舍就行，在食堂吃饭，用老书记的旧车就行，司机也不用换。他说：“我是来工作的，不是来享受的。和干部在一起工作生活，各方面都方便。”
+大家觉得，从特区来的干部，如此朴素，如此严于律己，跟着这样的领导工作，大家都服气。  
+
+P177 不过另一个人讲过一个故事，这个人是纪检委书记，厦门送给宁德一辆小中巴，作为公车，当时大家还不知道是厦门送的，就有人向上级部门告状，说习主席搞特殊，买进口车。后来这个人写了一份材料来解释这个事情，送给习主席看，问他对这份材料有没有什么意见，习主席也没看，他说：“我就不看了，你实事求是反映就行了。”  
+
+P138 后来发现人不见了，一打听，下去调研了  
+
+调查实际：今年已经去了 6 个省了；P3 跑遍了 9 个县，不要小瞧调查实际这一条，是极为重要的。信息论；了解实际是根本，看收藏，决策的所有的依据，习主席说中国作为一个大国，决不能犯根本性错误，毛主席晚年做了不少错事，我以为很重要一个原因就是他有些脱离实际，不了解真实的情况了。习主席这样，肯定不会犯不了解实际的错误，这样就不会犯根本性错误，即使出了差错，看到实际情况不太好以后，也能很快纠正过来。
 
 P16 天气很热，桑拿天，一个多月翻山越岭，很不容易。
+
+三进下党，下党乡非常穷，没有路，习主席去的时候，下党乡党委书记拿着镰刀走在最前面，要砍草才能进去。习主席说：“下党这个地方，我来一次一辈子都忘不了。”  
+前两个月看科技新闻，看到下党乡现在都通了 5G 了。  
 
 P17 吃糯米榯，手抓，怕不卫生，准备筷子，说不行。
 
@@ -23,16 +48,16 @@ P3 听汇报，不要念稿子，是考察干部的好办法
 P4 每到一个地方都要读县志，光靠跑了解是不够的  
 
 
+P116 信访工作，一直很难，从群众上访变成领导下访，这个人亲身经历的事情是，一天受理了 86 件事，当场解决了十几件，剩下的相关部门也要在一个月之内解决。规定每个月的 20 号为各个县的信访日，领导要亲自去参加  
+
+
 
 定战略：弱鸟先飞，滴水石穿，自己见证过这个自然奇迹。(查原话)  
 
 
 具体做法：P67 打基础、建地基、立支柱、重软件  
 
-P90 茶叶  
-
-体高附加值：P91 不要只是生产简单的。  
-
+P267 自然条件很差，“硬”的条件没有，可以在“软”得条件上下功夫，简化手续，改善服务质量  
 
 从严治吏，反腐：
 
@@ -40,17 +65,56 @@ P30 党建是关系到我们事业成败的关键。
 
 P34 腐败没有刹住，其他任何事情都做不成。  
 
-P35 阻力非常大，涉及到的人非常多  
+P35 阻力非常大，涉及到的人非常多，处理了 2000 多人，大一些的干部有 200 多；P194 当时大家认为，涉及面太广，而且很多职位较高，比较困难。习主席问，是得罪这几百人几千人，还是得罪几百万宁德的群众呢？他们说当然是这几百几千人，习主席说，那就应该做。  
 
 
-读书：经常手不释卷，利用一切时间读书  
+P90 茶叶  
+
+体高附加值：P91 不要只是生产简单的。  
+
+P231 去马尾船厂，问了造船用料，国产占比多少等等，船厂的领导说主要设备和系统都要进口，习主席说，我们想要发展好，还是要把重心放在提高技术水平上，不要总是干苦力活儿，要着眼高精尖，实现国产化，掌握主动权。  
+
+P244 古田县 1958 年建成了一座很大的水库，但是后来因为资金不足，还有各种政治运动，所以移民搬迁问题一直没有妥善解决，1989 年又建水电站，又要移民搬迁，工作非常难做。  
+
+P246 没有土地，发展食用菌。  
+
+
+用人：
+P94 选人标准，不看年龄资历，只看有没有做事的能力，有没有责任感，有没有担当；不看你汇报说了什么，而是看你实实在在做了什么；他当时很年轻，大家说是不是应该用那个资历老的，习主席说我比他还年轻，我能干，他怎么不行？  
+P224 干部要德才兼备，重要的是德  
+P270 看人很准，大胆起用新人，有些干部不太起眼，习主席说“放到基层试试看”，结果风生水起，能看到人的潜力。  
+P294 我就很想知道怎么看的这么准的，一个是前面的听汇报，一个是自己下基层，聊天，不是随口问问就算了，而是通过了解的估算基层干部汇报的数据是不是有水分  
+
+
+服众，收人收心：
+带一个小笔记本，有想法要求都会记下来，比如有些人讲的一些个人困难，合理的都会记上，可能当时他们都没在意，过一段时间，习主席就给解决了，所以他不是张口闭口讲大道理，就是用实际行动来关心干部。  
+P238 当时又穷又缺干部，有人才就想留着，习主席却主张把干部送出去，多历练，多开眼界；  
+P201 军队调防，孩子上学的事情有很大的困难，习主席亲自督办的这件事，解决了家属进城和子女入学问题，  
+P277 泥石流，没鞋子，马上自己掏钱给他买了一双，那么多基层干部都没发现  
+P261 2010 年会福建，当时省委书记孙春兰准备介绍，习主席说：“不用介绍了，我比你对他们更熟。”  
+
+
+
+P121 1988 年到的宁德，第二年政治风波，别人都不敢出来讲话，习主席开了新闻年发布会，讲了社会主义的民主观，不是为特定阶层服务的，不能极端化。大家都觉得在理，很多疑虑都打消了。沉着冷静，当时全国都是谣言满天飞，宁德却非常平静。
+
+P236 有浙江的学生想来宁德，习主席设立了检查站，把他们都劝了回去。习主席的做法果断正确，稳定了大局。  
+
+江主席当时是上海市委书记，当时处理的非常好，他给学生背了林肯的《葛底斯堡演说》，把他们都给镇住了。后来去北京，就是因为这个。  
+
+胡主席当时是西藏自治区的党委书记，他当时是坚决平定了西藏的暴乱，也很快调任中央了  
+
+
+
+读书：一多半的人都说到爱读书，经常手不释卷，利用一切时间读书；P120 当时流行跳交际舞，年轻人都在学，习主席一次也没去过，一有时间就读书；P133 家属楼，整个院子都是黑的，就他家的灯还亮着，去过他家，地上都是一摞一摞的书；  
 
 
 保护环境：P71 发展林业的好处；他在讲话中说过，环境问题不但是一个生态问题，还是一个重要的政治问题，比如前些年雾霾很严重的时候，社会上有很大的不满的声音，不利于社会稳定。  
 
-P89 现在森林覆盖率达到 67%，是当年的硕果。高瞻远瞩。  
+P89 现在森林覆盖率达到 67%，是当年的硕果。高瞻远瞩；P342 森林是水库、钱库、粮库；还进行了林业责任制和经营机制的改革；  
 
+P116 遇到风浪，厦门游泳  
 
+P268 建数字基站。在招待所门口等。
 
 
 
