--- a/pytorch/ch2/深度学习.md
+++ b/pytorch/ch2/深度学习.md
@@ -10,7 +10,7 @@
 
 #### LSTM 是怎么改进的，LSTM有几个门？各个门的作用是什么？公式是什么？LSTM解决了什么问题、画一下LSTM结构图、
 
-#### 说一说 word embedding、word2vec、skip-gram、
+#### 说一说 word embedding、word2vec 公式、skip-gram、
 
 #### Mask R-CNN
 损失函数、RPN、ROIAlign、
@@ -33,6 +33,7 @@ d2l 第 7 章
 5、relu 好处  
 
 6、
+
 
 
 ### 已解决问题
