--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -6,11 +6,13 @@
 一般不超过 10 遍，面试之前再抄一遍：  
 一天主要学一个就好了，时间够  
 SVM 第 7 遍；10 遍以后读周志华、李航，最后整合  
-GBDT 读公式 3 遍  
+GBDT 读公式读例题 3 遍  
 xgboost 公式 3 遍  
 LSTM 公式 1 遍，读图画图 1 遍   
 梯度消失梯度爆炸公式  
 Kmeans 公式  
+TF-IDF 公式  
+word2vec 公式  
 
 
 成不了最聪明的人，但是可以成为抄公式最多的人。  
