--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,4 +1,5 @@
 
+这个方法最大的作用就是可以做到永不放弃，这个方法把极为困难的事情，按 5 分钟分解成一段一段，就成为非常容易的事情，从而可以做到永不放弃。只要能做到永不放弃，就能做成任何想做的事情。  
 
 ## 已完成
 只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
@@ -27,7 +28,8 @@
 14、README 整理完毕  
 15、完成 pysnooper Batch Normalization  
 16、抄公众号 SVM 公式  
-17、
+17、计时超过六百次，完成了 600 次小任务  
+18、
 
 
 
