--- a/pytorch/ch2/机器学习.md
+++ b/pytorch/ch2/机器学习.md
@@ -4,7 +4,6 @@
 ### 期望的公式
 
 #### 1、xgboost 相关
-①、  
 ②、为什么要二阶展开  
 ③、xgboost采样的时候怎么采样的  
 ④、手写xgboost的目标函数，xgboost和GBDT的区别，xgboost构建树时候节点分裂的公式是什么？ xgboost如何调参,xgboost可以自定义损失函数吗？给定一个场景如何自定义损失函数？如果样本的权重不一样如何自定义损失函数？sklearn的xgboost支持哪些损失函数？分类和回归算法都有哪些损失函数？模型融合如何做的？bagging，boosting和stacking的原理以及他们的区别是是什么；
@@ -21,9 +20,17 @@
 
 
 #### 5、kmeans
-手写 Kmeans 代码、具体步骤、k 值如何选择、如何初始化、聚的是特征还是样本？特征的距离如何计算？  
+手写 Kmeans 代码(debug 一遍，如果再看到，就)、如何初始化、聚的是特征还是样本？特征的距离如何计算？  
 什么数据不能聚：圆环套圆圈、笑脸、，非凸数据  
 
+已解决：
+具体步骤：  
+1、随机选择 k 个样本点作为初始聚类中心  
+2、计算每个样本到类中心的距离，将每个样本指派到与其最近的中心的类中，得到一个聚类结果  
+3、更新每个类的样本的均值，作为类的新的中心  
+4、重复上面两个步骤，直到收敛为止  
+
+k 值如何选择？P267 尝试不同的 k 值，选择最优的。  
 
 
 #### 6、SVM： 拉格朗日乘子，KKT条件，对偶问题，核方法是什么，用过哪些核函数
@@ -68,7 +75,7 @@ PCA的流程，PCA第一步为什么要中心化、
 
 10、BERT模型架构，怎么预训练，怎么feature based/fine-tune
 
-12、LSTM和GRU门机制
+12、LSTM 和 GRU 门机制
 
 13、GBDT原理。追问：负梯度的概念是什么，为什么用负梯度
 
