--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -2,17 +2,16 @@
 ### 等同视之，就是都不重要，要抓住主要矛盾，要使用注意力机制。李航这本书抄了 9 遍，半年时间，用了十几支笔，结果还是一头雾水。现在找了最重要的 20 个公式，几天就完全掌握了，效率差 1000 倍，效果更好。
 
 每天起床第一件事就是公式，用抄公式学会机器学习    
-
-一般不超过 10 遍，面试之前再抄一遍：  
-一天主要学一个就好了，时间够  
-SVM 第 7 遍；10 遍以后读周志华、李航，最后整合  
+现在抄公式的目的是面试，所以方法应该是广而浅，能答上来就行，一般不超过 10 遍，面试前再抄一遍。如果工作之后用的算法还有不熟练的地方，再专而深，有的是时间，来日方长。抄公式半个小时就行  
+SVM 第 9 遍；10 遍以后读周志华、李航，最后整合  
 GBDT 读公式读例题 3 遍  
 xgboost 公式 3 遍  
 LSTM 公式 1 遍，读图画图 1 遍   
 梯度消失梯度爆炸公式  
-Kmeans 公式  
+Kmeans 背 1 次     
 TF-IDF 公式  
 word2vec 公式  
+Batch Norm 公式  
 
 
 成不了最聪明的人，但是可以成为抄公式最多的人。  
@@ -54,8 +53,9 @@ P166 提升树
 P168 例 8.2  
 P171 算法 8.4 (GBDT)  
 
-P264 Kmeans 公式  
+P264 Kmeans 公式；两句话是核心，背下来    
 P265 算法 14.2 (Kmeans)  
+P267 K 值的选择  
 
 
 要抄写的内容：面试常问的问题、李航统计学习方法、周志华机器学习、论文、  
