--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -16,18 +16,23 @@ P142 在宁德的时候，有一个管财政的人去找习主席谈话，习主
 
 P226 救活了马尾船厂，马尾船厂是洋务运动时期，左宗棠在 1866 年创办的一家船厂，这个人是船厂总经理，他接手的时候船厂已经步履维艰了，习主席去调研，他们说了自己的困难，习主席表示会支持船厂发展，而且提出让他们搞债转股，要开辟多元化融资渠道。后来在习主席的主导下，每年给船厂拨款 2000 万。  
 
+
+
 1988 年 6 月至 1990 年 4 月任宁德地委书记，现在已经基本上已经没有地委了，级别应该是和市委书记一样。 
 
 宁德当时非常贫穷，山多地少，山上也不长树，没有矿产，缺水缺电，灾害频繁，是全国 18 个集中连片贫困地区之一，经济总量排全省最后，俗称“闽东老九”。  
 
-一个是宁德倒数第一，没有了积极性，每次坐最后一排，习主席年轻，有为，想去带一带  
-
-P138 刚到等他讲话，都习惯了新官上任三把火，本以为会有很多高谈阔论，结果说的很简单，也没有豪言壮语，很快就结束了，大家都有些意外。
+一个是宁德倒数第一，没有了积极性，每次坐最后一排，习主席年轻，有为，想去带一带；每次都坐第一排，积极发言  
 
 P105 本来是为他在宾馆腾出了套间，还有专门的人照顾生活起居，配了一辆进口小汽车，他都谢绝了，他说住在机关宿舍就行，在食堂吃饭，用老书记的旧车就行，司机也不用换。他说：“我是来工作的，不是来享受的。和干部在一起工作生活，各方面都方便。”
 大家觉得，从特区来的干部，如此朴素，如此严于律己，跟着这样的领导工作，大家都服气。  
 
 P177 不过另一个人讲过一个故事，这个人是纪检委书记，厦门送给宁德一辆小中巴，作为公车，当时大家还不知道是厦门送的，就有人向上级部门告状，说习主席搞特殊，买进口车。后来这个人写了一份材料来解释这个事情，送给习主席看，问他对这份材料有没有什么意见，习主席也没看，他说：“我就不看了，你实事求是反映就行了。”  
+
+
+可以看到没有资源的时候怎么做，对自己，对国家  
+
+P138 刚到等他讲话，都习惯了新官上任三把火，本以为会有很多高谈阔论，结果说的很简单，也没有豪言壮语，很快就结束了，大家都有些意外。
 
 P138 后来发现人不见了，一打听，下去调研了  
 
@@ -47,15 +52,18 @@ P3 听汇报，不要念稿子，是考察干部的好办法
 
 P4 每到一个地方都要读县志，光靠跑了解是不够的  
 
+现在去考察，也是先去看历史文化馆  
+
 
 P116 信访工作，一直很难，从群众上访变成领导下访，这个人亲身经历的事情是，一天受理了 86 件事，当场解决了十几件，剩下的相关部门也要在一个月之内解决。规定每个月的 20 号为各个县的信访日，领导要亲自去参加  
 
 
 
+可以看出在没有资源，处于劣势的时候怎么做。  
 定战略：弱鸟先飞，滴水石穿，自己见证过这个自然奇迹。(查原话)  
 
 
-具体做法：P67 打基础、建地基、立支柱、重软件  
+具体做法：P67 打基础、建地基、立支柱、重软件；内容  
 
 P267 自然条件很差，“硬”的条件没有，可以在“软”得条件上下功夫，简化手续，改善服务质量  
 
