--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -2,13 +2,14 @@
 ### 等同视之，就是都不重要，要抓住主要矛盾，要使用注意力机制。李航这本书抄了 9 遍，半年时间，用了十几支笔，结果还是一头雾水。现在找了最重要的 20 个公式，几天就完全掌握了，效率差 1000 倍，效果更好。
 
 每天起床第一件事就是公式，用抄公式学会机器学习    
-现在抄公式的目的是面试，所以方法应该是广而浅，能答上来就行，一般不超过 10 遍，面试前再抄一遍。如果工作之后用的算法还有不熟练的地方，再专而深，有的是时间，来日方长。抄公式半个小时就行  
-SVM 第 9 遍；10 遍以后读周志华、李航，最后整合  
+现在抄公式的目的是面试，所以方法应该是广而浅，能答上来就行，一般不超过 10 遍，面试前再抄一遍。如果工作之后用的算法还有不熟练的地方，再专而深，有的是时间，来日方长。  
+### 抄公式半个小时就行  
+SVM 第 11 遍；读周志华、李航，最后整合  遍  
 GBDT 读公式读例题 3 遍  
 xgboost 公式 3 遍  
 LSTM 公式 1 遍，读图画图 1 遍   
 梯度消失梯度爆炸公式  
-Kmeans 背 1 次     
+Kmeans 读 20 遍 1 次     
 TF-IDF 公式  
 word2vec 公式  
 Batch Norm 公式  
