--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -1,6 +1,12 @@
 
 ### 小米手机，倒计时一小时，点到即止  
 
+一是可以换换脑子，当做休息  
+二是可以学习领导方法  
+三、比看社交媒体好百万倍  
+四、可以判断未来形势，有利于自己以后工作  
+五、  
+
 收获，应该给自己个人定一个 30 年规划，肯定不准，但是应该有一个大的方向，指导行动。原来看不到这么远  
 
 我开始是用手机的倒计时，用了一段时间，感觉很难用，后来下载了几个 APP，最后定下来用这可番茄时钟。现在已经 800 次了，完成了 800 个小任务  
@@ -30,7 +36,6 @@ P105 本来是为他在宾馆腾出了套间，还有专门的人照顾生活起
 P177 不过另一个人讲过一个故事，这个人是纪检委书记，厦门送给宁德一辆小中巴，作为公车，当时大家还不知道是厦门送的，就有人向上级部门告状，说习主席搞特殊，买进口车。后来这个人写了一份材料来解释这个事情，送给习主席看，问他对这份材料有没有什么意见，习主席也没看，他说：“我就不看了，你实事求是反映就行了。”  
 
 
-可以看到没有资源的时候怎么做，对自己，对国家  
 
 P138 刚到等他讲话，都习惯了新官上任三把火，本以为会有很多高谈阔论，结果说的很简单，也没有豪言壮语，很快就结束了，大家都有些意外。
 
@@ -38,28 +43,39 @@ P138 后来发现人不见了，一打听，下去调研了
 
 调查实际：今年已经去了 6 个省了；P3 跑遍了 9 个县，不要小瞧调查实际这一条，是极为重要的。信息论；了解实际是根本，看收藏，决策的所有的依据，习主席说中国作为一个大国，决不能犯根本性错误，毛主席晚年做了不少错事，我以为很重要一个原因就是他有些脱离实际，不了解真实的情况了。习主席这样，肯定不会犯不了解实际的错误，这样就不会犯根本性错误，即使出了差错，看到实际情况不太好以后，也能很快纠正过来。
 
-P16 天气很热，桑拿天，一个多月翻山越岭，很不容易。
+
+P16 天气很热，桑拿天，一个多月翻山越岭，很不容易。  
 
 三进下党，下党乡非常穷，没有路，习主席去的时候，下党乡党委书记拿着镰刀走在最前面，要砍草才能进去。习主席说：“下党这个地方，我来一次一辈子都忘不了。”  
 前两个月看科技新闻，看到下党乡现在都通了 5G 了。  
 
-P17 吃糯米榯，手抓，怕不卫生，准备筷子，说不行。
+P17 吃糯米榯，手抓，怕不卫生，准备筷子，说不行。  
 
-P32 看了，说不是不努力，是客观条件确实不好。听了都眼含热泪，都是说他们思想保守，干劲儿不足。  
+P32 看了，说不是不努力，是客观条件确实不好，大家工作辛苦了。听了都眼含热泪，都是说他们思想保守，干劲儿不足。  
 
 
+用人：
+P270 看人很准，大胆起用新人，有些干部不太起眼，习主席说“放到基层试试看”，结果风生水起，能看到人的潜力。  
 P3 听汇报，不要念稿子，是考察干部的好办法  
+P94 选人标准，不看年龄资历，只看有没有做事的能力，有没有责任感，有没有担当；不看你汇报说了什么，而是看你实实在在做了什么；他当时很年轻，大家说是不是应该用那个资历老的，习主席说我比他还年轻，我能干，他怎么不行？  
+P224 干部要德才兼备，重要的是德  
+P294 我就很想知道怎么看的这么准的，一个是前面的听汇报，一个是自己下基层，聊天，不是随口问问就算了，而是通过了解的估算基层干部汇报的数据是不是有水分  
 
 P4 每到一个地方都要读县志，光靠跑了解是不够的  
 
 现在去考察，也是先去看历史文化馆  
 
-
 P116 信访工作，一直很难，从群众上访变成领导下访，这个人亲身经历的事情是，一天受理了 86 件事，当场解决了十几件，剩下的相关部门也要在一个月之内解决。规定每个月的 20 号为各个县的信访日，领导要亲自去参加  
 
+这个一个是可以了解实际情况，一个是可以化解矛盾，有利于社会稳定  
+我读过一本习主席的《关于总体国家安全观的论述摘编》，都是历次讲话中关于国家安全的部分。一本书读下来，就感到习主席有着非常强的忧患意识，他经常引用“安不可以忘危，治不可以忘乱”“备豫不虞，为国常道”这样的话。他在里面提到的一种工作方法就是要“为之于未有，治之于未乱。”我看下来，就感觉到其实很多危险，还没有发生的时候，习主席就已经考虑到了，加强了这方面的工作，把危险在无形之中就消解了。两千多年前的《黄帝内经》中就说：“上医治未病，中医治欲病，下医治已病。”这是一种非常高超的工作方法。  
 
 
-可以看出在没有资源，处于劣势的时候怎么做。  
+可以看出在没有资源，处于劣势的时候怎么做。对自己，对国家  
+
+改变思想：地方贫困，观念不能“贫困”。“安贫乐道”，“穷自在”，“等、靠、要”，怨天尤人，等等，这些观念全应在扫荡之列。我们要把事事求诸人转为事事先求诸己。
+不少同志希望国家多拨资金，多安排一些计划内原料，总之，韩信用兵，多多益善。一般说来，关照多一点总不是坏事。这心情可以理解，但我们有必要摆正一个位置：把解决原材料、资金短缺的关键，放到我们自己身上来，这个位置的转变，是“先飞”意识的第一要义。我们要把事事求诸人转为事事先求诸己。比如说，可以着眼于挖掘潜力，降低成本；可以通过外引内联，建立稳定的物资协作网络；可以鼓励各县制定一些让利政策。我们完全有能力在一些未受制约的领域，在贫困地区中具备独特优势的地方搞超常发展。也就是说，贫困地区完全可能依靠自身的努力、政策、长处、优势在特定领域“先飞”，以弥补贫困带来的劣势。  
+
 定战略：弱鸟先飞，滴水石穿，自己见证过这个自然奇迹。(查原话)  
 
 
@@ -67,9 +83,16 @@ P116 信访工作，一直很难，从群众上访变成领导下访，这个人
 
 P267 自然条件很差，“硬”的条件没有，可以在“软”得条件上下功夫，简化手续，改善服务质量  
 
+我们不要模仿大城市，搞一整套庞大的机构，从一开始我们就要有全新的办法，比如简化手续、降低费用、改善服务质量，“一个窗口，一个图章”，等等。  
+
 从严治吏，反腐：
 
+
 P30 党建是关系到我们事业成败的关键。  
+
+《摆脱贫困》从严治党、为政清廉关系到改革开放的成败，始终是我党的生命线。失掉民众，这是万劫不复的。国民党失败的根本原因。  
+1989年的政治风波也从反面教育了我们：廉政建设是我们共产党人的历史使命，如果我们不能承担起这种历史使命，我们就会失去民心，就会被敌人找到进攻的缺口。
+
 
 P34 腐败没有刹住，其他任何事情都做不成。  
 
@@ -87,11 +110,6 @@ P244 古田县 1958 年建成了一座很大的水库，但是后来因为资金
 P246 没有土地，发展食用菌。  
 
 
-用人：
-P94 选人标准，不看年龄资历，只看有没有做事的能力，有没有责任感，有没有担当；不看你汇报说了什么，而是看你实实在在做了什么；他当时很年轻，大家说是不是应该用那个资历老的，习主席说我比他还年轻，我能干，他怎么不行？  
-P224 干部要德才兼备，重要的是德  
-P270 看人很准，大胆起用新人，有些干部不太起眼，习主席说“放到基层试试看”，结果风生水起，能看到人的潜力。  
-P294 我就很想知道怎么看的这么准的，一个是前面的听汇报，一个是自己下基层，聊天，不是随口问问就算了，而是通过了解的估算基层干部汇报的数据是不是有水分  
 
 
 服众，收人收心：
