--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,6 +1,8 @@
 
 这个方法最大的作用就是可以做到永不放弃，这个方法把极为困难的事情，按 5 分钟分解成一段一段，就成为非常容易的事情，从而可以做到永不放弃。能做到永不放弃，就能做成任何事情。  
 
+学不动了再学一会儿就好了，有很强的的抵触情绪，很焦躁，坐下来就好了，一旦坐下来，其他的事情都会自然而然进行下去，心情舒畅，效率很高。  
+
 ## 已完成
 只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
 
