--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,4 +1,8 @@
 
+还是要尝试，至少坚持一年。方法就是工具，工具是可以被反复使用的。speed controller 不是一节课，而是 4800 多节课  
+
+评价标准只有一个：能不能做成事情。不管是不是麻烦，是不是碎片化。  
+
 核心是完成 5 分钟的任务，消除主观疲劳，达到永不放弃，否则只是计时显摆，没有任何意义，反而成了累赘。  
 
 这个方法最大的作用就是可以做到永不放弃，这个方法把极为困难的事情，按 5 分钟分解成一段一段，就成为非常容易的事情，从而可以做到永不放弃。能做到永不放弃，就能做成任何事情。  
@@ -8,7 +12,7 @@
 ## 已完成
 只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
 
-只关注 5 分钟算一个任务，每天都能完成几十个任务  
+不在统计次数，会错失重心。还是以做成的事情为准  
 
 不要小瞧小任务，习主席说，把正在做的事情做好，就是在报效国家，就是在为民族复兴做贡献  
 
@@ -319,6 +323,8 @@ mp3 格式，发邮箱，iPhone 可以用 iTunes，刷牙的时候听
 ### 每月 15 号在群里说一次；一年以后写评论  
 https://www.youtube.com/watch?v=TQMbvJNRpLE&t=46s  
 
+
+
 在看这个视频之前，我从来没有完成过自己的目标，这个视频改变了我的人生
 
 视频看了 30 遍  
@@ -327,5 +333,18 @@ https://www.youtube.com/watch?v=TQMbvJNRpLE&t=46s
 跑步  
 
 
+用结果说话，结果是最有力的证明  
+
+我觉得这个方法还是非常值得一试的，比如小龙准备考试的时候，如果把这项非常艰巨的任务，按 5 分钟分解，完成一个 5 分钟的任务，再完成下一个 5 分钟的任务，不想后面还剩下多少，是不是会容易很多？肯定不会这么饱受煎熬了。  
+
+如果其他人也差不多都像小龙这样备尝艰辛，我们学同样的内容，做同样的事情，而我因为用了好的方法，做起事来轻松得多，我是不是就有非常大的优势？肯定是这样的。如果人们觉得一件事情太难，就很容易半途而废。  
+
+只是我现在感觉这个方法让我做事太碎片化了，或许是因为我现在没有工作，所以松松散散，说不定工作以后会好一些。  
+
+我非常重视做事的方法，因为方法不是一件事情，而是无数的事情。方法是可以被反复使用的，改进一个方法，可以改进几十万件事情。查理芒格说方法就是工具，这个说法不应该说非常形象，而应该说非常准确，因为方法就是工具，只不过不是看得见的工具，而是思想的工具。  
+
+我举一个例子，我这三年最主要的学习方式就是看视频，其次才是自己读书，我看了很多课程。比如我这几个月学的一套课程就有 21 门课，一共 2400 多节，我原来下载了一个可以改变播放速度的插件，网站上一般也是可以更改播放速度的，但是最高就是两倍速，我最高可以达到 16 倍，不过我一般是用 4 倍速。少的时候看不出来，但是多了以后就有了天壤之别了。这个工具不是决定一节课，而是所有的课程。这套课程我看了两遍，就是 4800 多节课，如果没有这个插件我不可能这么快看完，至少要 3 倍以上的时间，要多学一年。比起没有这个插件的人，我就有非常大的优势。  
+
+好的方法和好的工具是一样的，是贯穿始终，要被反复使用的，可以决定做的每一件事。所以还要试一试。  
 
 
