--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -3,14 +3,14 @@
 
 每天起床第一件事就是公式，用抄公式学会机器学习    
 现在抄公式的目的是面试，所以方法应该是广而浅，能答上来就行，一般不超过 10 遍，面试前再抄一遍。如果工作之后用的算法还有不熟练的地方，再专而深，有的是时间，来日方长。  
-### 抄公式半个小时就行  
-SVM 第 11 遍；读周志华、李航，最后整合  遍  
+### 抄公式半个小时就行，一天两个，来日方长    
+SVM 第 11 遍；读周志华、李航，最后整合 1 遍  
 GBDT 读公式读例题 3 遍  
 xgboost 公式 6 遍  
 LSTM 公式 1 遍，读图画图 1 遍   
 梯度消失梯度爆炸公式  
-Kmeans 读 20 遍 2 次     
-TF-IDF 公式  
+Kmeans 读 20 遍 3 次     
+TF-IDF 公式读 20 遍  次  
 word2vec 公式  
 Batch Norm 公式  
 大 O 读  遍  
@@ -68,5 +68,14 @@ LR 公式 13 遍
 
 xgboost 视频《Python 数据分析与机器学习实战》 200、201、204 看完第 2 遍  
 
+
+#### 知识点：
+Kmeans 具体步骤：  
+1、随机选择 k 个样本点作为初始聚类中心  
+2、计算每个样本到类中心的距离，将每个样本指派到与其最近的中心的类中，得到一个聚类结果  
+3、更新每个类的样本的均值，作为类的新的中心  
+4、重复上面两个步骤，直到收敛为止  
+
+六个字：定中心，分样本  
 
 
