--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -58,6 +58,7 @@ P264 Kmeans 公式；两句话是核心，背下来
 P265 算法 14.2 (Kmeans)  
 P267 K 值的选择  
 
+P320 TF-IDF 自己写的公式和上面的总结的一句话  
 
 要抄写的内容：面试常问的问题、李航统计学习方法、周志华机器学习、论文、  
 
