--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -5,13 +5,11 @@
 二是可以学习领导方法  
 三、比看社交媒体好百万倍  
 四、可以判断未来形势，有利于自己以后工作  
-五、  
+五、看的越多，就对国家未来的发展越有信心，非常愉快  
 
 收获，应该给自己个人定一个 30 年规划，肯定不准，但是应该有一个大的方向，指导行动。原来看不到这么远  
 
-我开始是用手机的倒计时，用了一段时间，感觉很难用，后来下载了几个 APP，最后定下来用这可番茄时钟。现在已经 800 次了，完成了 800 个小任务  
 
-每一小任务，就是一幅画的一个小格子，能完成一个，就能完成所有。  
 
 《在宁德》
 漏了很多好东西；很粗糙；
