--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -12,7 +12,6 @@
 
 
 《在宁德》
-漏了很多好东西；很粗糙；
 
 漏了一个，啤酒厂，开源，水涨船高，非常支持。其他人觉得花钱太多。后来交税  
 
@@ -91,6 +90,7 @@ P30 党建是关系到我们事业成败的关键。
 《摆脱贫困》从严治党、为政清廉关系到改革开放的成败，始终是我党的生命线。失掉民众，这是万劫不复的。国民党失败的根本原因。  
 1989年的政治风波也从反面教育了我们：廉政建设是我们共产党人的历史使命，如果我们不能承担起这种历史使命，我们就会失去民心，就会被敌人找到进攻的缺口。
 
+这两年世界局势非常混乱，前一段时间的白俄罗斯，前几天吉尔吉斯斯坦总统府都被攻占了，总统下台了，这几天泰国大游行，这可能才是一个开始，世界进行洗牌，中国还非常稳定，反腐是很重要的一个原因，社会风气明显好转。
 
 P34 腐败没有刹住，其他任何事情都做不成。  
 
