--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -6,13 +6,13 @@
 ### 抄公式半个小时就行，一天两个，来日方长    
 SVM 第 11 遍；读周志华、李航，最后整合 1 遍  
 GBDT 读公式读例题 3 遍  
-xgboost 公式 6 遍  
+xgboost 公式 9 遍  
 LSTM 公式 1 遍，读图画图 1 遍   
 梯度消失梯度爆炸公式  
-Kmeans 读 20 遍 3 次     
-TF-IDF 公式读 20 遍  次  
+Kmeans 读 20 遍 4 次     
+TF-IDF 公式读 20 遍 3 次  
 word2vec 公式  
-Batch Norm 公式  
+Batch Norm 公式读  次    
 大 O 读  遍  
 
 成不了最聪明的人，但是可以成为抄公式最多的人。  
