--- a/pytorch/ch2/机器学习.md
+++ b/pytorch/ch2/机器学习.md
@@ -3,7 +3,7 @@
 
 ### 期望的公式
 
-#### 1、xgboost 相关
+#### 1、xgboost 相关，会问的很细，要读多遍论文
 ②、为什么要二阶展开  
 ③、xgboost采样的时候怎么采样的  
 ④、手写xgboost的目标函数，xgboost和GBDT的区别，xgboost构建树时候节点分裂的公式是什么？ xgboost如何调参,xgboost可以自定义损失函数吗？给定一个场景如何自定义损失函数？如果样本的权重不一样如何自定义损失函数？sklearn的xgboost支持哪些损失函数？分类和回归算法都有哪些损失函数？模型融合如何做的？bagging，boosting和stacking的原理以及他们的区别是是什么；
@@ -37,11 +37,11 @@ k 值如何选择？P267 尝试不同的 k 值，选择最优的。
 
 
 #### 7、特征工程
-怎么清洗数据、特征筛选，怎么找出相似性高的特征并去掉、如何比较feature importance、不平衡样本处理（迪哥课程里有）、特征数值范围很大怎么办、  
+怎么清洗数据、特征筛选，怎么找出相似性高的特征并去掉、如何比较feature importance、不平衡样本处理(五次看到)（迪哥课程里有）、特征数值范围很大怎么办、  
 
 
 #### 知道的 loss 都有哪些？
-L1、MSE、cross-entropy（讲一讲交叉熵。d2l）、
+L1、MSE、cross-entropy（讲一讲交叉熵 三次看到了。d2l）、
 
 #### 谈谈对 PCA 的认识  
 PCA的流程，PCA第一步为什么要中心化、
