--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -3,14 +3,14 @@
 
 每天起床第一件事就是公式，用抄公式学会机器学习    
 现在抄公式的目的是面试，所以方法应该是广而浅，能答上来就行，一般不超过 10 遍，面试前再抄一遍。如果工作之后用的算法还有不熟练的地方，再专而深，有的是时间，来日方长。  
-### 抄公式半个小时就行，一天两个，来日方长    
+### 抄公式半个小时就行，一天 2 个，一天 3 次，两到三天完成一个公式  
 SVM 第 11 遍；读周志华、李航，最后整合 1 遍  
 GBDT 读公式读例题 3 遍  
 xgboost 公式 9 遍  
 LSTM 公式 1 遍，读图画图 1 遍   
 梯度消失梯度爆炸公式  
-Kmeans 读 20 遍 4 次     
-TF-IDF 公式读 20 遍 3 次  
+Kmeans 读 20 遍 5 次     
+TF-IDF 公式读 20 遍 6 次  
 word2vec 公式  
 Batch Norm 公式读  次    
 大 O 读  遍  
