--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -38,7 +38,9 @@
 16、抄公众号 SVM 公式  
 17、计时超过六百次，完成了 600 次小任务  
 18、计时超过八百次，完成了 800 次小任务  
-19、
+19、配置成功了 Mask R-CNN、YOLOv3、YOLOv5、bert 的运行环境，工作已经成了手拿把攥的事情，没有了障碍  
+20、背会了 Kmeans  
+21、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
