--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -20,7 +20,6 @@ P142 在宁德的时候，有一个管财政的人去找习主席谈话，习主
 P226 救活了马尾船厂，马尾船厂是洋务运动时期，左宗棠在 1866 年创办的一家船厂，这个人是船厂总经理，他接手的时候船厂已经步履维艰了，习主席去调研，他们说了自己的困难，习主席表示会支持船厂发展，而且提出让他们搞债转股，要开辟多元化融资渠道。后来在习主席的主导下，每年给船厂拨款 2000 万。  
 
 
-
 1988 年 6 月至 1990 年 4 月任宁德地委书记，现在已经基本上已经没有地委了，级别应该是和市委书记一样。 
 
 宁德当时非常贫穷，山多地少，山上也不长树，没有矿产，缺水缺电，灾害频繁，是全国 18 个集中连片贫困地区之一，经济总量排全省最后，俗称“闽东老九”。  
@@ -85,9 +84,12 @@ P267 自然条件很差，“硬”的条件没有，可以在“软”得条件
 从严治吏，反腐：
 
 
-P30 党建是关系到我们事业成败的关键。  
+P30 党的领导是国家发展的核心，所以党自身一定要，党建是关系到我们事业成败的关键。  
 
 《摆脱贫困》从严治党、为政清廉关系到改革开放的成败，始终是我党的生命线。失掉民众，这是万劫不复的。国民党失败的根本原因。  
+2014 年进行军改，当时是在福建古田开的会议，那次开会非常严厉，指出了军队的 10 个问题，后来处理了几百个高级将领，全军通报了公示了 40 多批。  
+习主席当时说，历史上多少功勋卓著的军队，都是被内部腐败打败了。一定要引以为戒。  
+
 1989年的政治风波也从反面教育了我们：廉政建设是我们共产党人的历史使命，如果我们不能承担起这种历史使命，我们就会失去民心，就会被敌人找到进攻的缺口。
 
 这两年世界局势非常混乱，前一段时间的白俄罗斯，前几天吉尔吉斯斯坦总统府都被攻占了，总统下台了，这几天泰国大游行，这可能才是一个开始，世界进行洗牌，中国还非常稳定，反腐是很重要的一个原因，社会风气明显好转。
