--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -40,7 +40,8 @@
 18、计时超过八百次，完成了 800 次小任务  
 19、配置成功了 Mask R-CNN、YOLOv3、YOLOv5、bert 的运行环境，工作已经成了手拿把攥的事情，没有了障碍  
 20、背会了 Kmeans  
-21、
+21、看 detectron2 视频，对 detectron2 有了初步了解  
+22、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
