--- a/pytorch/ch2/面试.md
+++ b/pytorch/ch2/面试.md
@@ -29,5 +29,9 @@
 
 遇到的最大的困难是什么，怎么解决的：学习机器学习和深度学习，零基础，没人教，学数学(高中数学、高数、线代、概率论、可汗学院、宋浩老师)、学英语(百词斩，10 个月)、学编程(零基础 hello world 都不会。Python、MySQL、HTML、Django、Linux、numpy、pandas、C++、docker、git(不会用GitHub)、阿里云服务器(不会用服务器)、sklearn、TensorFlow、pytorch、Keras)、学算法(机器学习，深度学习)，看视频，看书  
 
+近期困难：学习目标检测，读论文，看不懂，硬看下来了；代码非常多，装 pycharm，各种问题，不会 debug，学 debug；自己电脑带不动，学远程连接，学阿里云服务器使用；学远程连接，要用专业版要破解，看了很多教程，试了很多次一直不成功，发现要用特定版本才行；学 anaconda 建虚拟环境，发现 cuda cudnn 不会装；学 docker，看视频；连接起来 interpreter 各种问题，不会用；然后是上传文件，运行成功；但是又太大，几个 G；最后还是用了 CPU，配置各种环境，一个项目一个环境，一个一个解决了，非常难；学习再读论文、看视频、跑代码，很多遍；  
+
 人生规划：先老老实实学技术，打好根基，想几年以后带团队做出实际的产品。  
+
+
 
