--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -67,7 +67,7 @@ P116 信访工作，一直很难，从群众上访变成领导下访，这个人
 我读过一本习主席的《关于总体国家安全观的论述摘编》，都是历次讲话中关于国家安全的部分。一本书读下来，就感到习主席有着非常强的忧患意识，他经常引用“安不可以忘危，治不可以忘乱”“备豫不虞，为国常道”这样的话。他在里面提到的一种工作方法就是要“为之于未有，治之于未乱。”我看下来，就感觉到其实很多危险，还没有发生的时候，习主席就已经考虑到了，加强了这方面的工作，把危险在无形之中就消解了。两千多年前的《黄帝内经》中就说：“上医治未病，中医治欲病，下医治已病。”这是一种非常高超的工作方法。  
 
 
-可以看出在没有资源，处于劣势的时候怎么做。对自己，对国家  
+可以看出在没有资源，处于劣势的时候怎么做。对自己，对国家；会形成政策，可以判断未来发展，对自己来说这里面就有机遇    
 
 改变思想：地方贫困，观念不能“贫困”。“安贫乐道”，“穷自在”，“等、靠、要”，怨天尤人，等等，这些观念全应在扫荡之列。我们要把事事求诸人转为事事先求诸己。
 不少同志希望国家多拨资金，多安排一些计划内原料，总之，韩信用兵，多多益善。一般说来，关照多一点总不是坏事。这心情可以理解，但我们有必要摆正一个位置：把解决原材料、资金短缺的关键，放到我们自己身上来，这个位置的转变，是“先飞”意识的第一要义。我们要把事事求诸人转为事事先求诸己。比如说，可以着眼于挖掘潜力，降低成本；可以通过外引内联，建立稳定的物资协作网络；可以鼓励各县制定一些让利政策。我们完全有能力在一些未受制约的领域，在贫困地区中具备独特优势的地方搞超常发展。也就是说，贫困地区完全可能依靠自身的努力、政策、长处、优势在特定领域“先飞”，以弥补贫困带来的劣势。  
@@ -111,14 +111,12 @@ P246 没有土地，发展食用菌。
 
 
 
-
 服众，收人收心：
 带一个小笔记本，有想法要求都会记下来，比如有些人讲的一些个人困难，合理的都会记上，可能当时他们都没在意，过一段时间，习主席就给解决了，所以他不是张口闭口讲大道理，就是用实际行动来关心干部。  
 P238 当时又穷又缺干部，有人才就想留着，习主席却主张把干部送出去，多历练，多开眼界；  
 P201 军队调防，孩子上学的事情有很大的困难，习主席亲自督办的这件事，解决了家属进城和子女入学问题，  
 P277 泥石流，没鞋子，马上自己掏钱给他买了一双，那么多基层干部都没发现  
 P261 2010 年会福建，当时省委书记孙春兰准备介绍，习主席说：“不用介绍了，我比你对他们更熟。”  
-
 
 
 P121 1988 年到的宁德，第二年政治风波，别人都不敢出来讲话，习主席开了新闻年发布会，讲了社会主义的民主观，不是为特定阶层服务的，不能极端化。大家都觉得在理，很多疑虑都打消了。沉着冷静，当时全国都是谣言满天飞，宁德却非常平静。
