--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,4 +1,6 @@
 
+#### 难的事情才五分钟，其他的事情一般用半个小时；试试，10 月 25 号  
+
 还是要尝试，至少坚持一年。方法就是工具，工具是可以被反复使用的。speed controller 不是一节课，而是 4800 多节课  
 
 评价标准只有一个：能不能做成事情。不管是不是麻烦，是不是碎片化。  
