--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -1,4 +1,8 @@
 
+取得的成就，做成的事情都记下来，以后回头看做了什么，都是最宝贵的记忆，不可复制，只能当下写，不写就没了。可以增强信心，是动力的源泉，不会自我否定，更加正面，不会深陷泥淖，不写这些好的，记住的总是不好的。  
+
+写一辈子，每个月总结，每个月报告  
+
 
 ### 第一个月；2020.09  
 
@@ -19,14 +23,6 @@
 10、C++ 第八章  
 11、C++ 第九章  
 12、计时超过四百次，也就是完成了 400 次小任务  
-
-
-
-### 已完成。善始善终永不放弃，这个才是贯穿始终反复使用的。
-1、
-2、
-
-
 
 
 
