--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,5 +1,5 @@
 
-#### 难的事情才五分钟，其他的事情一般用半个小时；试试，10 月 25 号  
+#### 难的事情才五分钟，其他的事情一般用 20 分钟；试试，10 月 25 号  
 
 还是要尝试，至少坚持一年。方法就是工具，工具是可以被反复使用的。speed controller 不是一节课，而是 4800 多节课  
 
@@ -43,7 +43,8 @@
 19、配置成功了 faster rcnn、Mask R-CNN、YOLOv3、YOLOv5、bert 的运行环境，工作已经成了手拿把攥的事情，没有了障碍  
 20、背会了 Kmeans  
 21、看 detectron2 视频，对 detectron2 有了初步了解  
-22、
+22、过完第一遍程序和代码，认识了目录结构，有了感性认识  
+23、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
