--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,7 +1,7 @@
 
-#### 难的事情才五分钟，其他的事情一般用 20 分钟；试试，10 月 25 号  
+#### 难的事情才五分钟，其他的事情一般用 25 分钟；试试，10 月 25 号  
 
-还是要尝试，至少坚持一年。方法就是工具，工具是可以被反复使用的。speed controller 不是一节课，而是 4800 多节课  
+还是要尝试，至少坚持一年，到 8 月 15 号。方法就是工具，工具是可以被反复使用的。speed controller 不是一节课，而是 4800 多节课  
 
 评价标准只有一个：能不能做成事情。不管是不是麻烦，是不是碎片化。  
 
@@ -44,7 +44,8 @@
 20、背会了 Kmeans  
 21、看 detectron2 视频，对 detectron2 有了初步了解  
 22、过完第一遍程序和代码，认识了目录结构，有了感性认识  
-23、
+23、读完一遍程序中所有的函数名，有了地图  
+24、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
