--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -1,5 +1,7 @@
 
-取得的成就，做成的事情都记下来，以后回头看做了什么，都是最宝贵的记忆，不可复制，只能当下写，不写就没了。可以增强信心，是动力的源泉，不会自我否定，更加正面，不会深陷泥淖，不写这些好的，记住的总是不好的。  
+取得的成就，做成的事情都记下来，以后回头看做了什么，都是最宝贵的记忆，不可复制，只能当下写，不写就永远都没了，人生只有一次。  
+
+可以增强信心，是动力的源泉，不会自我否定，更加正面，不会深陷泥淖，不写这些好的，记住的总是不好的。  
 
 写一辈子，每个月总结，每个月报告  
 
