--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -45,8 +45,11 @@
 21、看 detectron2 视频，对 detectron2 有了初步了解  
 22、过完第一遍程序和代码，认识了目录结构，有了感性认识  
 23、读完一遍程序中所有的函数名，有了地图  
-24、计时超过八百次，完成了 800 次小任务  
-25、
+24、计时超过一千次，完成了 1000 次小任务  
+25、收拾完了东西，寄走了  
+26、详细 debug 完了 debug faster rcnn，一遍就理解了 80%  
+27、
+
 
 
 一天只做 3 件事：项目、抄公式、习主席  
