--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -1,6 +1,8 @@
 
 取得的成就，做成的事情都记下来，以后回头看做了什么，都是最宝贵的记忆，不可复制，只能当下写，不写就永远都没了，人生只有一次。  
 
+如果记录下这 3 年的学习成就，肯定会非常精彩。已经做不到了。记录下工作以后，创业以后的成就。
+
 可以增强信心，是动力的源泉，不会自我否定，更加正面，不会深陷泥淖，不写这些好的，记住的总是不好的。  
 
 写一辈子，每个月总结，每个月报告  
