--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -48,7 +48,10 @@
 24、计时超过一千次，完成了 1000 次小任务  
 25、收拾完了东西，寄走了  
 26、详细 debug 完了 debug faster rcnn，一遍就理解了 80%  
-27、
+27、debug 完 ResNet  
+28、
+
+
 
 
 
