--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -47,9 +47,11 @@
 23、读完一遍程序中所有的函数名，有了地图  
 24、计时超过一千次，完成了 1000 次小任务  
 25、收拾完了东西，寄走了  
-26、详细 debug 完了 debug faster rcnn，一遍就理解了 80%  
+26、详细 debug 完了 faster rcnn，一遍就理解了 80%  
 27、debug 完 ResNet  
-28、
+28、详细 debug 完了 mask rcnn  
+29、
+
 
 
 
