--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,4 +1,8 @@
 
+这个方法的作用主要是三点：一是极大减少开始时的抵触心理，很容易开始，开始就能做下来，比一点不开始好无数倍；二是做事的过程中减少主观疲劳，极大减少压力，容易百倍，乐在其中；三是做事可以坚持到最后，可以做到永不放弃。  
+
+最重要的是可以用在所有的事情上，所有的事都是由开始、过程、结束组成的，可以用在所有的事情上。  
+
 #### 难的事情才五分钟，其他的事情一般用 25 分钟；试试，10 月 25 号  
 
 还是要尝试，至少坚持一年，到 8 月 15 号。方法就是工具，工具是可以被反复使用的。speed controller 不是一节课，而是 4800 多节课  
