--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -7,9 +7,9 @@
 SVM 第 11 遍；读周志华、李航，最后整合 1 遍  
 GBDT 读公式读例题 3 遍  
 xgboost 公式 9 遍  
-LSTM 公式 1 遍，读图画图 1 遍   
-梯度消失梯度爆炸公式  
-Kmeans 读 20 遍 6 次     
+LSTM 公式 6 遍，读图画图 3 遍   
+梯度消失梯度爆炸公式 1 遍  
+Kmeans 读 20 遍 10 次     
 TF-IDF 公式读 20 遍 6 次  
 word2vec 公式  
 Batch Norm 公式读  次    
