--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -3,7 +3,7 @@
 
 最重要的是可以用在所有的事情上，所有的事都是由开始、过程、结束组成的，可以用在所有的事情上。  
 
-#### 难的事情才五分钟，其他的事情一般用 20 分钟；试试，10 月 25 号  
+#### 难的事情才五分钟，其他的事情一般用 20 分钟；10 月 25 号  
 
 还是要尝试，至少坚持一年，到 8 月 15 号。方法就是工具，工具是可以被反复使用的。speed controller 不是一节课，而是 4800 多节课  
 
@@ -29,8 +29,8 @@
 1、debug 完成 YOLOv5 代码  
 2、完成一遍 faster rcnn，debug 代码、视频、论文小标题，已经理解了 95%  
 3、用 Mask RCNN 实现了检测气球，完全可以换成任意数据集，可以用来解决任意问题  
-4、
-
+4、项目已经看完了第 3 遍，理解了 80%，说是第 3 遍，其实就是第 2 遍，第一遍啥都没学会。还有 3 遍，没有任何问题，100% 能学会。  
+5、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
@@ -57,7 +57,6 @@
 吃饭：  
 刷牙：在牙杯或牙膏上放什么东西  
 上厕所：  
-
 
 
 1、用钥匙锁门，就永远不会忘带钥匙。因为没带钥匙就锁不了门，加到前面，成为一个必须的环节，没有就无法进行  
