--- a/pytorch/ch2/机器学习.md
+++ b/pytorch/ch2/机器学习.md
@@ -37,25 +37,24 @@ k 值如何选择？P267 尝试不同的 k 值，选择最优的。
 
 
 #### 7、特征工程
-怎么清洗数据、特征筛选，怎么找出相似性高的特征并去掉、如何比较feature importance、不平衡样本处理(五次看到)（迪哥课程里有）、特征数值范围很大怎么办、  
+怎么清洗数据、特征筛选，怎么找出相似性高的特征并去掉、如何比较feature importance、不平衡样本处理(六次看到)（迪哥课程里有）、特征数值范围很大怎么办、  
 
 
-#### 知道的 loss 都有哪些？
-L1、MSE、cross-entropy（讲一讲交叉熵 三次看到了。d2l）、
+#### 知道的 loss 都有哪些？写一下公式，写一下 softmax 公式
+L1、MSE、cross-entropy（讲一讲交叉熵，写出交叉熵公式 四次看到了。d2l）、
 
 #### 谈谈对 PCA 的认识  
 PCA的流程，PCA第一步为什么要中心化、
 
 #### 介绍 GBDT  
 
+决策树如何剪枝的
 
 
 
 
 
-
-
-1、AUC值，PR曲线，ROC曲线
+1、AUC值，PR曲线，ROC曲线；pr曲线，roc曲线。L2正则，L1正则
 
 2、交叉熵和最大似然估计的关系推导
 
