--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -13,8 +13,9 @@ Kmeans 读 20 遍 10 次
 TF-IDF 公式读 20 遍 6 次  
 word2vec 公式  
 Batch Norm 公式读  次    
-交叉熵损失函数读 d2l 1 遍  
+交叉熵 cross entropy 损失函数读 d2l 1 遍  
 nndl 注意力机制公式    
+ 
 
 成不了最聪明的人，但是可以成为抄公式最多的人。  
 
