--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -1,19 +1,23 @@
 
 ### 等同视之，就是都不重要，要抓住主要矛盾，要使用注意力机制。李航这本书抄了 9 遍，半年时间，用了十几支笔，结果还是一头雾水。现在找了最重要的 20 个公式，几天就完全掌握了，效率差 1000 倍，效果更好。
 
-每天起床第一件事就是公式，用抄公式学会机器学习    
+每天起床第一件事就是抄公式，用抄公式学会机器学习    
 现在抄公式的目的是面试，所以方法应该是广而浅，能答上来就行，一般不超过 10 遍，面试前再抄一遍。如果工作之后用的算法还有不熟练的地方，再专而深，有的是时间，来日方长。  
 ### 抄公式半个小时就行，一天 2 个，一天 3 次，两到三天完成一个公式  
-SVM 第 11 遍；读周志华、李航，最后整合 1 遍  
+每天 debug 三遍 5 个项目  
+SVM 第 13 遍；读周志华、李航，最后整合 1 遍  
 GBDT 读公式读例题 3 遍  
-xgboost 公式 9 遍  
-LSTM 公式 12 遍，读图画图 4 遍   
-梯度消失梯度爆炸公式 2 遍  
 Kmeans 读 20 遍 10 次     
 TF-IDF 公式读 20 遍 6 次  
+xgboost 公式 9 遍  
+
+LSTM 公式 12 遍，读图画图 4 遍   
+GRU 读 1 遍  
+梯度消失梯度爆炸公式 3 遍  
 word2vec 公式  
 Batch Norm 公式读  次    
-交叉熵 cross entropy 损失函数读 d2l 1 遍  
+交叉熵 cross entropy 损失函数 8 遍  
+
 nndl 注意力机制公式    
  
 
@@ -67,9 +71,10 @@ P320 TF-IDF 自己写的公式和上面的总结的一句话
 
 已完成公式，所有的都过完一遍之后，再精通。面试之前再抄一遍  
 
-LR 公式 13 遍  
+LR 公式 15 遍  
 
 xgboost 视频《Python 数据分析与机器学习实战》 200、201、204 看完第 2 遍  
+
 
 
 #### 知识点：
