--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -4,7 +4,7 @@
 每天起床第一件事就是抄公式，用抄公式学会机器学习    
 现在抄公式的目的是面试，所以方法应该是广而浅，能答上来就行，一般不超过 10 遍，面试前再抄一遍。如果工作之后用的算法还有不熟练的地方，再专而深，有的是时间，来日方长。  
 ### 抄公式半个小时就行，一天 2 个，一天 3 次，两到三天完成一个公式  
-每天 debug 三遍 5 个项目  
+每天 debug 三遍 5 个项目  遍；先 30 遍再说，不行就 50 遍；
 SVM 第 13 遍；读周志华、李航，最后整合 1 遍  
 GBDT 读公式读例题 3 遍  
 Kmeans 读 20 遍 10 次     
