--- a/pytorch/ch2/面试.md
+++ b/pytorch/ch2/面试.md
@@ -24,23 +24,22 @@
 
 自己的缺点：笨，学很多遍也记不住。优点：勤奋，会多付出，直到学会为止。终身学习，每天进步。  
 
-查理芒格：我不断地看到有些人在生活中越过越好。他们不是最聪明的，甚至不是最勤奋的，但他们是学习机器。他们每天夜里睡觉时都比那天早晨聪明一点点。孩子们，这种习惯对你们很有帮助，特别是在你们还有很长的路要走的时候。。  
+查理芒格：我不断地看到有些人在生活中越过越好。他们不是最聪明的，甚至不是最勤奋的，但他们是学习机器。他们每天夜里睡觉时都比那天早晨聪明一点点。孩子们，这种习惯对你们很有帮助，特别是在你们还有很长的路要走的时候。  
 
 做过的最有成就感的事：这个为主，学会了机器学习和深度学习。读了 300 本书，读完史诗 5 本、《资治通鉴》、《穷查理宝典》 、
 
-遇到的最大的困难是什么，怎么解决的：学习机器学习和深度学习，零基础，没人教  
+遇到的最大的困难是什么，怎么解决的：学习机器学习和深度学习，起步零基础，过程没人教  
 
 学数学(高中数学、高数、线代、概率论、数值优化、可汗学院、宋浩老师)、  
 
 学英语(百词斩，10 个月)、  
 
-学编程(零基础 hello world 都不会。Python、MySQL、HTML、Django、Linux、numpy、pandas、C++、docker、git(不会用GitHub)、阿里云服务器(不会用服务器)、sklearn、TensorFlow、PyTorch、Keras、MXNet)、  
+学编程(零基础 hello world 都不会。Python、MySQL、HTML、Django、Linux、VIM、numpy、pandas、C++、docker、git(不会用GitHub)、阿里云服务器(不会用服务器)、OpenCV、sklearn、TensorFlow、PyTorch、Keras、MXNet)、  
 
 学算法  
-(机器学习，李航、周志华、吴恩达、李宏毅、林轩田、白板  
+(机器学习：李航、周志华、吴恩达、李宏毅、林轩田、白板  
 
-深度学习：邱锡鹏、李沐、花书、Hands-on、Keras 作者、斋藤康毅、论文、吴恩达、李宏毅、李沐、李飞飞、manning、唐宇迪 3000 节课，两遍  
-)，看视频，看书  
+深度学习：开始看不懂，先看的发展史和产业应用；邱锡鹏、李沐、花书、Hands-on、Keras 作者、斋藤康毅、论文、吴恩达、李宏毅、李沐、李飞飞、manning、唐宇迪 3000 节课，两遍，130 多个项目；内容过多，都完全掌握至少要两三年时间，先掌握主要思想，以后要用哪个项目，就看两遍视频，敲两遍代码就学会了)，看视频，看书  
 
 怎么克服困难的？不知道，就是一个想法，就是要学会，需要学什么就学什么，遇到什么问题就解决什么问题。  
 
