--- a/pytorch/ch2/面试.md
+++ b/pytorch/ch2/面试.md
@@ -39,7 +39,7 @@
 学算法  
 (机器学习：李航、周志华、吴恩达、李宏毅、林轩田、白板  
 
-深度学习：开始看不懂，先看的发展史和产业应用；邱锡鹏、李沐、花书、Hands-on、Keras 作者、斋藤康毅、论文、吴恩达、李宏毅、李沐、李飞飞、manning、唐宇迪 3000 节课，两遍，130 多个项目；内容过多，都完全掌握至少要两三年时间，先掌握主要思想，以后要用哪个项目，就看两遍视频，敲两遍代码就学会了)，看视频，看书  
+深度学习：开始看不懂，先看的发展史和产业应用；邱锡鹏、李沐、花书、Hands-on、Keras 作者、斋藤康毅、论文、吴恩达、李宏毅、李沐、李飞飞、manning、唐宇迪 3000 节课，两遍，130 多个项目；本来是自己手写的，但是学习太慢了；内容过多，都完全掌握至少要两三年时间，先掌握主要思想，以后要用哪个项目，就看两遍视频，敲两遍代码就学会了)，看视频，看书  
 
 怎么克服困难的？不知道，就是一个想法，就是要学会，需要学什么就学什么，遇到什么问题就解决什么问题。  
 
