--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -28,11 +28,11 @@ YOLO 综述
 
 这个是关键所在，总是记不住，抄个百八十遍肯定就记住了。赫布理论、听歌、卖油翁  
 
-抄很多遍，抄 100 遍还还记不住？再记不住就抄 1000 遍  
+抄很多遍，抄 100 遍还记不住？再记不住就抄 1000 遍  
 
 要背诵一些基础知识点，否则一直浮于表面，细节不清晰，用的时候力不从心  
 
-理解了的道理而没有牢记下来就不能称其为知识————但丁《神曲》  
+理解了的道理而没有牢记下来就不能称其为知识——但丁《神曲》  
 
 就可劲儿抄去吧，这是最容易，最轻松的事了，很享受这个过程，就是一种休息    
 
