--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -30,7 +30,12 @@
 2、完成一遍 faster rcnn，debug 代码、视频、论文小标题，已经理解了 95%  
 3、用 Mask RCNN 实现了检测气球，完全可以换成任意数据集，可以用来解决任意问题  
 4、项目已经看完了第 3 遍，理解了 80%，说是第 3 遍，其实就是第 2 遍，第一遍啥都没学会。还有 3 遍，没有任何问题，100% 能学会。  
-5、
+5、项目看完了 6 遍  
+6、迪哥看了，通过了  
+7、写完简历  
+8、投了简历  
+9、项目内容总是弄混，开始记详细的笔记，很清楚，完成了 Faster R-CNN  
+10、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
