--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -31,12 +31,12 @@
 3、用 Mask RCNN 实现了检测气球，完全可以换成任意数据集，可以用来解决任意问题  
 4、项目已经看完了第 3 遍，理解了 80%，说是第 3 遍，其实就是第 2 遍，第一遍啥都没学会。还有 3 遍，没有任何问题，100% 能学会。  
 5、项目看完了 6 遍  
-6、  
-7、  
-8、  
-9、项目内容总是弄混，开始记详细的笔记，很清楚，完成了 Faster R-CNN  
-10、完成了 Mask R-CNN  
-11、看完了 Django 系列课程的 Python 基础课，学会了：要多写注释、文档字符串、占位符、可变对象和不可变对象、列表推导式、break continue、迭代器生成器、关键字参数、不定长参数、变量作用域、闭包、global 和 nonlocal、模块和包、文件读写、try except、封装、构造方法、self 关键字、静态方法、继承、方法覆盖、super 关键字、属性操作、序列化和反序列化、多线程、线程同步、socket、TCP、UDP、数据库的安装和操作  
+6、项目内容总是弄混，开始记详细的笔记，很清楚，完成了 Faster R-CNN    
+7、完成了 Mask R-CNN   
+8、看完了 Django 系列课程的 Python 基础课，学会了：要多写注释、文档字符串、占位符、可变对象和不可变对象、列表推导式、break continue、迭代器生成器、关键字参数、不定长参数、变量作用域、闭包、global 和 nonlocal、模块和包、文件读写、try except、封装、构造方法、self 关键字、静态方法、继承、方法覆盖、super 关键字、属性操作、序列化和反序列化、多线程、线程同步、socket、TCP、UDP、数据库的安装和操作    
+9、学完 PyCharm  
+10、
+11、
 12、
 
 
