--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -35,9 +35,13 @@
 7、完成了 Mask R-CNN   
 8、看完了 Django 系列课程的 Python 基础课，学会了：要多写注释、文档字符串、占位符、可变对象和不可变对象、列表推导式、break continue、迭代器生成器、关键字参数、不定长参数、变量作用域、闭包、global 和 nonlocal、模块和包、文件读写、try except、封装、构造方法、self 关键字、静态方法、继承、方法覆盖、super 关键字、属性操作、序列化和反序列化、多线程、线程同步、socket、TCP、UDP、数据库的安装和操作    
 9、学完 PyCharm  
-10、学完了 HTML  
-11、学完了 CSS  
-12、
+10、学完 HTML  
+11、学完 CSS  
+12、学完 JavaScript、jQuery  
+13、听完《褚时健传》  
+14、学完 MySQL  
+15、学完 Django 基础  
+16、
 
 
 
