--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,9 +1,9 @@
 
-这个方法的作用主要是三点：一是极大减少开始时的抵触心理，很容易开始，开始就能做下来，比一点不开始好无数倍；二是做事的过程中减少主观疲劳，极大减少压力，容易百倍，乐在其中；三是做事可以坚持到最后，可以做到永不放弃。  
+这个方法的作用主要是三点：一是极大减少开始时的抵触心理，很容易开始，开始就能做下来，比一点不开始好无数倍；二是做事的过程中减少主观疲劳，极大减少压力，容易百倍，乐在其中；三是做事可以坚持到最后，可以做到永不放弃，能做到永不放弃就能做成任何事情。  
 
 最重要的是可以用在所有的事情上，所有的事都是由开始、过程、结束组成的，可以用在所有的事情上。  
 
-#### 难的事情才五分钟，其他的事情一般用 20 分钟；10 月 25 号  
+#### 难的事情才五分钟，其他的事情一般用 20 分钟；10 月 25 号；一天 20 次，一年 7000 次，30 年完成 20 万次，能完成 20 万个小任务，就肯定非常好了。能完成一次，就能完成 20 万次  
 
 还是要尝试，至少坚持一年，到 8 月 15 号。方法就是工具，工具是可以被反复使用的。speed controller 不是一节课，而是 4800 多节课  
 
@@ -42,7 +42,13 @@
 14、学完 MySQL  
 15、学完 Django 基础  
 16、计时 1500 次，也就是说完成了 1500 个小任务  
-17、
+17、学完 Django 博客项目
+18、学完 Django restful  
+19、学完 Flask 基础  
+20、学完 Flask 博客项目  
+21、学完 Tornado  
+22、学完 Django 在线教育项目  
+23、
 
 
 
