--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -50,7 +50,8 @@
 22、学完 Django 在线教育项目  
 23、这个星期读书时长 16 个小时，又恢复了原来的时长，能读书，就什么都不用怕  
 24、这个月平均每天走 7500 步，身体是根本，有机会成本在里面  
-25、
+25、看完 100 集纪录片《中国通史》  
+26、
 
 
 
