--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -26,33 +26,9 @@
 
 种一个土豆也是为国家做贡献  
 
-1、debug 完成 YOLOv5 代码  
-2、完成一遍 faster rcnn，debug 代码、视频、论文小标题，已经理解了 95%  
-3、用 Mask RCNN 实现了检测气球，完全可以换成任意数据集，可以用来解决任意问题  
-4、项目已经看完了第 3 遍，理解了 80%，说是第 3 遍，其实就是第 2 遍，第一遍啥都没学会。还有 3 遍，没有任何问题，100% 能学会。  
-5、项目看完了 6 遍  
-6、项目内容总是弄混，开始记详细的笔记，很清楚，完成了 Faster R-CNN    
-7、完成了 Mask R-CNN   
-8、看完了 Django 系列课程的 Python 基础课，学会了：要多写注释、文档字符串、占位符、可变对象和不可变对象、列表推导式、break continue、迭代器生成器、关键字参数、不定长参数、变量作用域、闭包、global 和 nonlocal、模块和包、文件读写、try except、封装、构造方法、self 关键字、静态方法、继承、方法覆盖、super 关键字、属性操作、序列化和反序列化、多线程、线程同步、socket、TCP、UDP、数据库的安装和操作    
-9、学完 PyCharm  
-10、学完 HTML  
-11、学完 CSS  
-12、学完 JavaScript、jQuery  
-13、听完《褚时健传》  
-14、学完 MySQL  
-15、学完 Django 基础  
-16、计时 1500 次，也就是说完成了 1500 个小任务  
-17、学完 Django 博客项目
-18、学完 Django restful  
-19、学完 Flask 基础  
-20、学完 Flask 博客项目  
-21、学完 Tornado  
-22、学完 Django 在线教育项目  
-23、这个星期读书时长 16 个小时，又恢复了原来的时长，能读书，就什么都不用怕  
-24、这个月平均每天走 7500 步，身体是根本，有机会成本在里面  
-25、看完 100 集纪录片《中国通史》  
-26、
-
+1、读完路遥《早晨从中午开始》  
+2、学完英语语法基础，解开了很多疑惑  
+3、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
