--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -28,7 +28,8 @@
 
 1、读完路遥《早晨从中午开始》  
 2、学完英语语法基础，解开了很多疑惑  
-3、
+3、五号，搬家完成。亚涛接我、看房子、打房东电话、搬东西、打扫卫生、买东西；以后每次去吃饭都刷碗，以后每个月给 2000 块钱  
+4、
 
 
 一天只做 3 件事：项目、抄公式、习主席  
