--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -29,8 +29,9 @@
 1、读完路遥《早晨从中午开始》  
 2、学完英语语法基础，解开了很多疑惑  
 3、五号。搬家完成。亚涛接我、看房子、打房东电话、搬东西、打扫卫生、买东西；以后每次去吃饭都刷碗，以后每个月给 2000 块钱  
-4、六号。听《兰花草》，失声痛哭，不能自已。什么忙都没有帮上，还添了不少乱，扯了后腿。无能为力。没想到自己竟然是以这样一种方式结束了这一个阶段。一定要成功，一定要成功。工作 100 个小时，听书 70 个小时    
+4、六号。听 GAI 周延的《兰花草》，失声痛哭，不能自已。什么忙都没有帮上，还添了不少乱，扯了后腿。无能为力。没想到自己竟然是以这样一种方式结束了这一个阶段。一定要成功，一定要成功。工作 100 个小时，听书 70 个小时    
 5、
+
 
 
 一天只做 3 件事：项目、抄公式、习主席  
