--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -32,7 +32,8 @@
 4、六号。听 GAI 周延的《兰花草》，失声痛哭，不能自已。什么忙都没有帮上，还添了不少乱，扯了后腿。无能为力。没想到自己竟然是以这样一种方式结束了这一个阶段。一定要成功，一定要成功。工作 100 个小时，听书 70 个小时    
 5、七号。第一天上班，工作非常好。21 点下班，22 点多一点就睡了。以后每天 8 点上班，21 点下班，中午午休 20 分钟，试一试行不行。  
 6、九号。完成第一个任务的第一版，89 篇作文，5 个版本的老师修改，相当于 540 篇作文  
-7、
+7、十号。完成第三个任务，语文题目纠错，方强的任务，问了他用的算法和模型，还有数据量。他说是 GPT2 和 T5，数据量 100w 条。很好，迈出了第一步  
+8、
 
 
 
