--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -33,7 +33,8 @@
 5、七号。第一天上班，工作非常好。21 点下班，22 点多一点就睡了。以后每天 8 点上班，21 点下班，中午午休 20 分钟，试一试行不行。  
 6、九号。完成第一个任务的第一版，89 篇作文，5 个版本的老师修改，相当于 540 篇作文  
 7、十号。完成第三个任务，语文题目纠错，方强的任务，问了他用的算法和模型，还有数据量。他说是 GPT2 和 T5，数据量 100w 条。很好，迈出了第一步  
-8、
+8、十三号。看完一门 Excel 课程。  
+9、
 
 
 
