--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -35,7 +35,8 @@
 7、十号。完成第三个任务，语文题目纠错，方强的任务，问了他用的算法和模型，还有数据量。他说是 GPT2 和 T5，数据量 100w 条。很好，迈出了第一步  
 8、十三号。看完一门 Excel 课程。  
 9、十三号。听完《知青岁月》。  
-10、
+10、十五号。读完歌德《浮士德》。  
+11、
 
 
 
