--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -37,7 +37,10 @@
 9、十三号。听完《知青岁月》。  
 10、十五号。读完歌德《浮士德》。  
 11、十六号。听完《马斯克传》。  
-12、
+12、二十二号。听完《穷查理宝典》。听书速度非常快，比读书快多了  
+13、二十三号。完成第四个任务。语音抽检验收  
+14、二十四号。听完了路遥的《早晨从中午开始》。  
+15、
 
 
 
