--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -40,7 +40,8 @@
 12、二十二号。听完《穷查理宝典》。听书速度非常快，比读书快多了  
 13、二十三号。完成第四个任务。语音抽检验收  
 14、二十四号。听完了路遥的《早晨从中午开始》。  
-15、
+15、二十五号。读完斋藤康毅《深度学习进阶 自然语言处理》。  
+16、
 
 
 
