--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -7,6 +7,28 @@
 
 写一辈子，每个月总结，每个月报告  
 
+### 2020.12 
+
+1、读完路遥《早晨从中午开始》  
+2、学完英语语法基础，解开了很多疑惑  
+3、五号。搬家完成。亚涛接我、看房子、打房东电话、搬东西、打扫卫生、买东西；以后每次去吃饭都刷碗，以后每个月给 2000 块钱  
+4、六号。听 GAI 周延的《兰花草》，失声痛哭，不能自已。什么忙都没有帮上，还添了不少乱，扯了后腿。无能为力。没想到自己竟然是以这样一种方式结束了这一个阶段。一定要成功，一定要成功。工作 100 个小时  
+5、七号。第一天上班，工作非常好。21 点下班，22 点多一点就睡了。以后每天 8 点上班，21 点下班，中午午休 20 分钟，试一试行不行。  
+6、九号。完成第一个任务的第一版，89 篇作文，5 个版本的老师修改，相当于 540 篇作文  
+7、十号。完成第三个任务，语文题目纠错，方强的任务，问了他用的算法和模型，还有数据量。他说是 GPT2 和 T5，数据量 100w 条。很好，迈出了第一步  
+8、十三号。看完一门 Excel 课程。  
+9、十三号。听完《知青岁月》。  
+10、十五号。读完歌德《浮士德》。  
+11、十六号。听完《马斯克传》。  
+12、二十二号。听完《穷查理宝典》。听书速度非常快，比读书快多了  
+13、二十三号。完成第四个任务。语音抽检验收  
+14、二十四号。听完了路遥的《早晨从中午开始》。  
+15、二十五号。读完斋藤康毅《深度学习进阶 自然语言处理》。  
+16、二十七号。读书时长达到 2200 小时。  
+17、三十一号。完成依图 ASR 任务，问了翟霄问题，又迈出了一步  
+
+
+
 ### 2020.11  
 
 1、debug 完成 YOLOv5 代码  
