--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -18,36 +18,11 @@
 ## 已完成
 只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
 
-不在统计次数，会错失重心。还是以做成的事情为准  
-
-不要小瞧小任务，习主席说，把正在做的事情做好，就是在报效国家，就是在为民族复兴做贡献  
-
-不要小瞧 5 分钟，乘以 3 就是 15 分钟，乘以 4 就是 20 分钟，乘以 16 就是 80 分钟  
-
-种一个土豆也是为国家做贡献  
-
-1、读完路遥《早晨从中午开始》  
-2、学完英语语法基础，解开了很多疑惑  
-3、五号。搬家完成。亚涛接我、看房子、打房东电话、搬东西、打扫卫生、买东西；以后每次去吃饭都刷碗，以后每个月给 2000 块钱  
-4、六号。听 GAI 周延的《兰花草》，失声痛哭，不能自已。什么忙都没有帮上，还添了不少乱，扯了后腿。无能为力。没想到自己竟然是以这样一种方式结束了这一个阶段。一定要成功，一定要成功。工作 100 个小时  
-5、七号。第一天上班，工作非常好。21 点下班，22 点多一点就睡了。以后每天 8 点上班，21 点下班，中午午休 20 分钟，试一试行不行。  
-6、九号。完成第一个任务的第一版，89 篇作文，5 个版本的老师修改，相当于 540 篇作文  
-7、十号。完成第三个任务，语文题目纠错，方强的任务，问了他用的算法和模型，还有数据量。他说是 GPT2 和 T5，数据量 100w 条。很好，迈出了第一步  
-8、十三号。看完一门 Excel 课程。  
-9、十三号。听完《知青岁月》。  
-10、十五号。读完歌德《浮士德》。  
-11、十六号。听完《马斯克传》。  
-12、二十二号。听完《穷查理宝典》。听书速度非常快，比读书快多了  
-13、二十三号。完成第四个任务。语音抽检验收  
-14、二十四号。听完了路遥的《早晨从中午开始》。  
-15、二十五号。读完斋藤康毅《深度学习进阶 自然语言处理》。  
-16、二十七号。读书时长达到 2200 小时。  
-17、三十一号。完成依图 ASR 任务，问了翟霄问题，又迈出了一步  
+1、一号。读完第二遍斋藤康毅《深度学习进阶》  
+2、一号。听完一遍《马斯克传》，马斯克很可能是人类有史以来最成功的人，他的话一般可以当做定理来使用，learn from him，学他做事的品质，认真地执行，错不了的  
+3、
 
 
-
-
-一天只做 3 件事：项目、抄公式、习主席  
 
 
 ### 用 5 分钟法锻炼善始善终永不放弃，这个才是贯穿始终反复使用的。
