--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -20,7 +20,10 @@
 
 1、一号。读完第二遍斋藤康毅《深度学习进阶》  
 2、一号。听完一遍《马斯克传》，马斯克很可能是人类有史以来最成功的人，他的话一般可以当做定理来使用，learn from him，学他做事的品质，认真地执行，错不了的  
-3、
+3、一号。下定决心在这里工作下去了，再也没有退路了，上天入地，直到成功为止  
+4、四号。这个阶层的人没人会写的，这就是我极大的优势。可以了解人的生活状态，可以了解国家的发展，未来会用得到。了解他们在做什么，观察他们的生活状态，了解他们的所思所想，了解他们需要什么，多多接触  
+5、四号。虽然所做的工作是基础的，但是可以锻炼自己的专注和高效，可以反复使用，终生受益  
+6、  
 
 
 
