--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -24,8 +24,9 @@
 4、四号。这个阶层的人没人会写的，这就是我极大的优势。可以了解人的生活状态，可以了解国家的发展，未来会用得到。了解他们在做什么，观察他们的生活状态，了解他们的所思所想，了解他们需要什么，多多接触  
 5、四号。虽然所做的工作是基础的，但是可以锻炼自己的专注和高效，可以反复使用，终生受益  
 6、六号。今天是 1966 年以来，北京最冷的一天，风非常大，走路上下班，来回两个小时，磨练了自己，一般的冷都不在话下了  
-7、八号。马斯克成为世界首富，而他的事业还处于起步阶段，他一生的成就之大，难以估量。认真学习马斯克的品质和方法，学透他一个人，在现实中认真效仿他的做法，他的话一般可以当做定理使用；今天早上上班，晚出门 5 分钟，到了的时候，天已经马上快亮了，流出了眼泪。已经一个月没有见过太阳了，以后天亮得越来越早了，要穿过这样一段黑暗的时光了；接了向宇的一个作文的任务，眼睛已经全是血丝了，看屏幕非常疼，还是完成了 200 篇作文，他给点了个赞。任何有限的成功对我而言都是极为重要的。  
-8、
+7、八号。马斯克成为世界首富，而他的事业还处于起步阶段，他一生的成就之大，难以估量。认真学习马斯克的品质和方法，学透他一个人，在现实中认真效仿他的做法，他的话一般可以当做定理使用；今天早上上班，晚出门 5 分钟，到了的时候，天已经马上快亮了，流出了眼泪。已经一个月没有见过太阳了，以后天亮得越来越早了，要穿过这样一段黑暗的时光了；
+8、十五号。办理离职。  
+9、十六号。又搬家了。  
 
 
 
