--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -26,8 +26,9 @@
 6、六号。今天是 1966 年以来，北京最冷的一天，风非常大，走路上下班，来回两个小时，磨练了自己，一般的冷都不在话下了  
 7、八号。马斯克成为世界首富，而他的事业还处于起步阶段，他一生的成就之大，难以估量。认真学习马斯克的品质和方法，学透他一个人，在现实中认真效仿他的做法，他的话一般可以当做定理使用；今天早上上班，晚出门 5 分钟，到了的时候，天已经马上快亮了，流出了眼泪。已经一个月没有见过太阳了，以后天亮得越来越早了，要穿过这样一段黑暗的时光了；
 8、十五号。办理离职。  
-9、十六号。又搬家了。  
-
+9、十六号。又搬家了。要先找到好的工作，有了稳定的后勤保障，才能安心学习。  
+10、二十一号。学完 Flask 基础  
+11、
 
 
 
@@ -210,11 +211,6 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 <br>
 读两行    
 <br>
-1、《知青岁月》  
-2、《在正定》  
-3、《在厦门》  
-4、《在宁德》  
-5、《在福州》  
 
 
 <br>
@@ -244,7 +240,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 <br>
 
 ## marginal ajustment to my daily routine
-1、吃饭时候看唐宇迪，学不下去抄公式；读书；看课程；读论文，一天 3 页，一年 100 篇；  
+1、学不下去抄公式；读书；看课程；读论文，一天 3 页，一年 100 篇；  
 2、散步的时候听书；一年多读 50 本书。做饭洗衣服的时候听书  
 3、decide to put 手机 down；一年几千次，每天省几个小时，可以产生 huge impact  
 4、刷牙洗澡的时候听演讲，要磨合；先听一年再说；完成目标，效果好的话再听一年；    
@@ -261,12 +257,12 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 《莎士比亚全集》  
 关于习主席的书  
 《平凡的世界》  
-《马斯克传》  
+
 
 
 ### 已经听完的书
 《褚时健传》
-
+《马斯克传》   
 
 
 ### 未完成；
