--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -28,7 +28,8 @@
 8、十五号。办理离职。  
 9、十六号。又搬家了。要先找到好的工作，有了稳定的后勤保障，才能安心学习。  
 10、二十一号。学完 Flask 基础  
-11、
+11、二十三号。学完 Django 在线教育项目  
+12、
 
 
 
@@ -53,7 +54,6 @@
 做饭：  
 吃饭：  
 刷牙：在牙杯或牙膏上放什么东西  
-上厕所：  
 
 
 1、用钥匙锁门，就永远不会忘带钥匙。因为没带钥匙就锁不了门，加到前面，成为一个必须的环节，没有就无法进行  
@@ -71,9 +71,6 @@
 3、  
 
 
-
-### 失败记录
-10.01：
 
 这种方法的核心是可以消除主观疲劳，就是只完成当前的 5 分钟任务就行，不用管还剩下多少。如果觉得有压力了，焦虑了，抵触了肯定是忘了这一点了，忘了这一点就要出问题。  
 
