--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -29,7 +29,8 @@
 9、十六号。又搬家了。要先找到好的工作，有了稳定的后勤保障，才能安心学习。  
 10、二十一号。学完 Flask 基础  
 11、二十三号。学完 Django 在线教育项目  
-12、
+12、二十五号。在我一直的印象之中，哥哥都是一个比较胖的人。今天才真的知道，因为生病，哥哥已经非常瘦小了。承受了多少的苦难。要多多努力，要早些找到工作。  
+13、
 
 
 
