--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -30,7 +30,8 @@
 10、二十一号。学完 Flask 基础  
 11、二十三号。学完 Django 在线教育项目  
 12、二十五号。在我一直的印象之中，哥哥都是一个比较胖的人。今天才真的知道，因为生病，哥哥已经非常瘦小了。承受了多少的苦难。要多多努力，要早些找到工作。  
-13、
+13、二十八号。验证了，根据报错信息，在报错位置是可以使用 pysnooper 的，这样解决 bug 就容易多了。可以很容易地解决所有的 bug，影响深远  
+14、  
 
 
 
