--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -18,21 +18,10 @@
 ## 已完成
 只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
 
-1、一号。读完第二遍斋藤康毅《深度学习进阶》  
-2、一号。听完一遍《马斯克传》，马斯克很可能是人类有史以来最成功的人，他的话一般可以当做定理来使用，learn from him，学他做事的品质，认真地执行，错不了的  
-3、一号。下定决心在这里工作下去了，再也没有退路了，上天入地，直到成功为止  
-4、四号。这个阶层的人没人会写的，这就是我极大的优势。可以了解人的生活状态，可以了解国家的发展，未来会用得到。了解他们在做什么，观察他们的生活状态，了解他们的所思所想，了解他们需要什么，多多接触  
-5、四号。虽然所做的工作是基础的，但是可以锻炼自己的专注和高效，可以反复使用，终生受益  
-6、六号。今天是 1966 年以来，北京最冷的一天，风非常大，走路上下班，来回两个小时，磨练了自己，一般的冷都不在话下了  
-7、八号。马斯克成为世界首富，而他的事业还处于起步阶段，他一生的成就之大，难以估量。认真学习马斯克的品质和方法，学透他一个人，在现实中认真效仿他的做法，他的话一般可以当做定理使用；今天早上上班，晚出门 5 分钟，到了的时候，天已经马上快亮了，流出了眼泪。已经一个月没有见过太阳了，以后天亮得越来越早了，要穿过这样一段黑暗的时光了；
-8、十五号。办理离职。  
-9、十六号。又搬家了。要先找到好的工作，有了稳定的后勤保障，才能安心学习。  
-10、二十一号。学完 Flask 基础  
-11、二十三号。学完 Django 在线教育项目  
-12、二十五号。在我一直的印象之中，哥哥都是一个比较胖的人。今天才真的知道，因为生病，哥哥已经非常瘦小了。承受了多少的苦难。要多多努力，要早些找到工作。  
-13、二十八号。验证了，根据报错信息，在报错位置是可以使用 pysnooper 的，这样解决 bug 就容易多了。可以很容易地解决所有的 bug，影响深远  
-14、  
+### 2021.02 
 
+1、计划做到一个星期不看微博不看 Twitter，是过完年能找到工作的最关键一步，完成以后就改成完成。  
+2、  
 
 
 
