--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -21,8 +21,8 @@
 ### 2021.02 
 
 1、计划做到一个星期不看微博不看 Twitter，是过完年能找到工作的最关键一步，完成以后就改成完成。  
-2、  
-
+2、这个星期有两个任务，一个是读完《Django》，读书时长要达到 42 小时以上，下周读《流畅的 Python》；第二个任务是写完这篇文章，一天通读 3 遍，一点一点补充，一点一点修改，这一篇会是代表作。    
+3、  
 
 
 ### 用 5 分钟法锻炼善始善终永不放弃，这个才是贯穿始终反复使用的。
