--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -25,6 +25,15 @@
 3、  
 
 
+
+### 使用 5 分钟法成功的例子；如果比较多了，而且证明是可以做到的，是非常有效的，就可以写
+1、早起。冬天早起很困难，办法就是，抬手、伸手、抓被角、掀被子，就能起床了。  
+2、刷微博。如果定的目标是永远不刷微博，可能就觉得太难，做不到。如果定的目标是这个星期不看，那就能做到。  
+3、  
+
+
+
+
 ### 用 5 分钟法锻炼善始善终永不放弃，这个才是贯穿始终反复使用的。
 1、每天使用 5 分钟法  
 2、讲完习主席 5 本书  
