--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -29,7 +29,8 @@
 ### 使用 5 分钟法成功的例子；如果比较多了，而且证明是可以做到的，是非常有效的，就可以写
 1、早起。冬天早起很困难，办法就是，抬手、伸手、抓被角、掀被子，就能起床了。  
 2、刷微博。如果定的目标是永远不刷微博，可能就觉得太难，做不到。如果定的目标是这个星期不看，那就能做到。  
-3、  
+3、读书，用电脑端读一节就读不动，用 iPad 读一页一页读就非常快  
+4、  
 
 
 
