--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -22,8 +22,30 @@
 
 1、读完《Django 开发实战》  
 2、这个星期有两个任务，一个是读完《Django》，读书时长要达到 42 小时以上，下周读《流畅的 Python》；第二个任务是写完这篇文章，一天通读 3 遍，一点一点补充，一点一点修改，这一篇会是代表作。    
-3、  
+3、更加深刻理解了查理芒格所说的能力圈的意义。  
+“这同样是一个非常非常有用的道理。每个人都有他的能力圈。要扩大那个能力圈是非常困难的。如果我不得不靠当音乐家来谋生……假设音乐是衡量文明的标准，那么我不知道必须把标准降到多低，我才能够有演出的机会。  
+所以你们必须弄清楚你们有什么本领。如果你们要玩那些别人玩得很好而你们一窍不通的游戏，那么你们注定会一败涂地。那是必定无疑的事情。你们必须弄清楚自己的优势在哪里，必须在自己的能力圈之内竞争。”  
 
+
+
+
+## 永远考虑机会成本  
+### 应该做的
+1、早起早睡锻炼身体。肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。刷牙，牙疼起来非常痛苦。  
+2、买水果。不买水果，就要买药  
+3、读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
+
+
+
+### 不应该做的  
+1、熬夜看电影。影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
+2、
+
+
+
+链接一个月更新一次  
+
+https://github.com/yananma/dongshouxue_sdxx/blob/master/pytorch/ch3/%E6%B0%B8%E8%BF%9C%E8%80%83%E8%99%91%E6%9C%BA%E4%BC%9A%E6%88%90%E6%9C%AC.md  
 
 
 ### 使用 5 分钟法成功的例子；如果比较多了，而且证明是可以做到的，是非常有效的，就可以写
