--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -39,9 +39,11 @@
 
 ### 不应该做的  
 1、熬夜看电影。影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
-2、
+2、刷网站。没用，耽误了读书读经典的时间。  
 
 
+
+正事：休息、运动、读经典、编程、写作、  
 
 链接一个月更新一次  
 
