--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -31,7 +31,7 @@
 
 ## 永远考虑机会成本  
 ### 应该做的
-1、早起早睡锻炼身体。肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。刷牙，牙疼起来非常痛苦。  
+1、早起早睡锻炼身体。肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；寿命，复利；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。刷牙，牙疼起来非常痛苦。  
 2、买水果。不买水果，就要买药  
 3、读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
 
