--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -41,12 +41,14 @@
 1、熬夜看电影。影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
 2、刷网站。没用，耽误了读书读经典的时间。  
 3、要是不看这些，早就成功了  
-4、
+4、听流行音乐。错失了至美的享受，错失了了解艺术的机会，失去了生活的一个极为重要的方面，错失了莫扎特、贝多芬、  
+
 
 
 
 正事：休息、运动、读经典、编程、写作、建网站、学人工智能、学物理、  
-想读的书：欧几里得、达尔文、
+想读的书：欧几里得、达尔文、  
+早起读几页书  
 
 
 链接一个月更新一次  
