--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -38,7 +38,7 @@
 
 
 ### 要注意的  
-1、早起不刷微博。没用，耽误了读书读经典的时间；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；  
+1、早起不刷微博。不刷微博就有了读书和写文章的时间了；没用，耽误了读书读经典的时间；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；  
 2、不要熬夜看电影。影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
 3、要是不看这些，早就成功照到了  
 4、不听流行音乐。错失了至美的享受，错失了了解艺术的机会，失去了生活的一个极为重要的方面，错失了莫扎特、贝多芬、  
